--- a/f2h2h1.github.io/_人工智能和数据科学.html
+++ b/f2h2h1.github.io/_人工智能和数据科学.html
@@ -135,6 +135,7 @@
                         元
                         角
                         分
+                        厘
         初等数论
             自然数
             正数
@@ -185,10 +186,14 @@
                                 特殊的多变形
                                     正x边形
                             圆
+                                直线的斜角和斜率
                                 普通的圆
                                 椭圆
                                 弓形
                                 扇形
+                                双曲线
+                                抛物线
+                平面向量
             立体几何
                 三维坐标系统
                     三维的笛卡尔坐标系 空间直角坐标系
@@ -198,8 +203,19 @@
                 立方体
                 圆柱体
                 球
+                空间向量
             三角学
         概率论和统计学
+            随机变量
+            数学期望
+        暂时不会分类的
+            集合
+            逻辑
+            不等式
+            数列
+            排列组合
+            导数
+            数学选修3-4 对称与群
         微积分之后的数学都可以叫做高等数学了
     微积分
     线性代数
@@ -851,7 +867,7 @@ leetcode做题的一般套路
         DeepMind 就是做 AlphaGo 那个，现在是 谷歌的全资子公司
     国内的
         幻方量化/深度求索
-        百度 阿里 腾讯 字节 华为 科大讯飞 月之暗面 智谱 太多了，几乎所有公司都有大模型
+        百度 阿里 腾讯 字节 华为 科大讯飞 月之暗面 智谱 MiniMax 太多了，几乎所有公司都有大模型
         四小龙
             商汤、旷视、云从、依图
         五虎？
@@ -873,6 +889,7 @@ leetcode做题的一般套路
     kimi 月之暗面
     混元
     星火 科大讯飞
+    GLM(General Language Model) ZAI（智谱AI）
     大模型的排行榜
         https://github.com/jeinlee1991/chinese-llm-benchmark
         https://www.superclueai.com/
@@ -987,7 +1004,13 @@ leetcode做题的一般套路
         这是一套系列丛书，一共有七本 https://github.com/Visualize-ML/Book3_Elements-of-Mathematics/blob/main/鸢尾花书_整体布局.pdf
     如何入门人工智能科研 https://github.com/WengLean/hands-on-research-tutorial
     动手学深度学习（Dive into Deep Learning，D2L.ai） https://github.com/d2l-ai/d2l-zh
-    从零开始的大语言模型原理与实践教程 https://github.com/datawhalechina/happy-llm
+    https://github.com/datawhalechina
+        Datawhale是一个专注于AI与数据科学的开源组织 https://www.datawhale.cn/
+            有课程 有认证
+        从零开始的大语言模型原理与实践教程 https://github.com/datawhalechina/happy-llm
+        从零开始构建智能体 https://github.com/datawhalechina/hello-agents
+        人工智能的数学基础 https://github.com/datawhalechina/math-for-ai
+        数学建模导论 https://github.com/datawhalechina/intro-mathmodel
     21节课教你开始构建生成式AI应用所需的一切知识
         https://github.com/microsoft/generative-ai-for-beginners
         https://github.com/microsoft/generative-ai-for-beginners/blob/main/translations/zh/README.md
@@ -1164,6 +1187,7 @@ ollama
         腾讯财经 <a href="http://qt.gtimg.cn/q=sh600000">http://qt.gtimg.cn/q=sh600000</a> <a href="https://sqt.gtimg.cn//?q=sh000001">https://sqt.gtimg.cn//?q=sh000001</a>
         akshare <a href="https://akshare.akfamily.xyz/introduction.html">https://akshare.akfamily.xyz/introduction.html</a>
         证券宝 <a href="http://www.baostock.com">http://www.baostock.com</a>
+        tushare <a href="https://tushare.pro/">https://tushare.pro/</a> 需要注册，但也是免费的
         openctp
             <a href="https://github.com/openctp/openctp">https://github.com/openctp/openctp</a> 这个仓库里有不少接口
             <a href="http://www.openctp.cn/">http://www.openctp.cn/</a>
@@ -1211,6 +1235,8 @@ ollama
             可以配合 qlib 使用
         <a href="https://github.com/emcie-co/parlant">https://github.com/emcie-co/parlant</a>
 <a href="https://github.com/stanfordnlp/dspy">https://github.com/stanfordnlp/dspy</a>
+        Fin-Agent <a href="https://github.com/YUHAI0/fin-agent">https://github.com/YUHAI0/fin-agent</a>
+            Fin-Agent 是一个基于 DeepSeek 等大模型和 Tushare 金融数据的智能金融分析代理
 电子支付，区块链，数字货币
     名词
         数字货币 digital currency
@@ -1224,10 +1250,15 @@ ollama
     区块链的相关介绍
         共识算法
         有哪些基于区块链的应用
+        两个核心
+            分布式系统
+            密码学
     数字货币
     比特币的相关介绍(Bitcoin)
         bit 比特
         coin 硬币
+        比特币的交易原理？
+            什么是手续费？
     除了比特币之外的主要的数字货币
         以太坊 (Ethereum, ETH): 以太坊是一个支持智能合约的区块链平台，允许开发者构建去中心化应用（DApps）。
         泰达币 (Tether, USDT): 作为一种稳定币，USDT 的价值与美元挂钩，通常用于在加密货币市场中作为交易媒介。
@@ -1250,7 +1281,50 @@ ollama
     什么是密码朋克(Crypto punk)
     什么是稳定币（Stablecoin）
         泰达币（英语：Tether，货币代号USD₮或USDT）
-    什么是web3</p>
+    什么是web3
+    什么是 混币器
+        Cryptocurrency tumbler
+        Coin Mixer
+        混币器的原理是什么
+        中心化混币器
+            用户信任第三方服务商来处理和混合资金，存在资金被盗风险
+        去中心化混币器
+            利用智能合约，由代码自动完成混合过程，理论上更安全
+        隐私币
+FIRE和财富自由和躺平
+    生活水平的分级
+        赤贫 贫穷 温饱 小康 中产 富裕 极富
+    财富自由
+        不需要工作的前提下可以一直保持 富裕或以上 的生活水平
+    躺平
+        定义1：财富自由
+        定义2：成年人不再积极工作/学生不再积极提高成绩
+        躺平是指不再积极工作
+        贫穷有贫穷的躺平方式
+        富裕有富裕的躺平方式
+        <a href="https://github.com/phodal/tangping">https://github.com/phodal/tangping</a>
+        最低生活保障
+        最低工资
+        被动收入
+    FIRE
+        定义
+            Financial independence,Retire early（财务独立，提早退休）
+            通过降低物欲，过极简的生活，迅速攒够生活费的25倍，靠4%的利息生活，
+            达到逃离“不开心”的工作，去追求自己喜欢的生活方式。
+            4% 是收益率减通胀率，不是理财的收益4%
+            FIRE 并没有明确提及生活水平，笔者认为至少都要有 小康 的水平吧
+        分类
+            FatFIRE 肥FIRE
+                进入 FIRE 后依然保持中产或以上的生活水平
+            RegularFIRE 传统FIRE
+                有计划地储蓄，储蓄达到一定金额后通过投资理财的被动收入支付生活成本
+                一般目标金额通常是 一年生活费的25倍 ， 一般假设投资理财一年会有 4%收益
+            LeanFIRE 瘦FIRE
+                尽力储蓄，以求尽快进入FIRE状态，强调很高的储蓄率和很低的生活费
+            BaristaFIRE 咖啡师FIRE
+                储蓄达到一定金额后，辞去传统的工作，从事某种形式的兼职，通过储蓄的投资理财和兼职收入达到FIRE的状态
+            CoastFIRE 滑行FIRE
+                储蓄达到一定金额后，不再积极储蓄，然后由投资理财让这笔储蓄通过投资理财在计划退休年龄达到可以FIRE的金额</p>
 <p>excel 相关经验
     冻结单元格
     筛选
@@ -1359,6 +1433,12 @@ ollama
             @cf/meta/llama-3.1-8b-instruct
             @cf/qwen/qwen2.5-coder-32b-instruct
         每天有一定的免费额度，但计算方式有点复杂，可以简单但不严谨地理解为每天只有20次左右
+    mistral
+        devstral-2512
+            <a href="https://docs.mistral.ai/models/devstral-2-25-12">https://docs.mistral.ai/models/devstral-2-25-12</a>
+            上下文 256
+            暂时还是免费的 <a href="https://mistral.ai/pricing#api-pricing">https://mistral.ai/pricing#api-pricing</a>
+    openrouter 也有不少免费的模型
     腾讯云 这个是收费的
 主要任务 次要任务 不重要的任务
     主要任务 最好的 模型 例如 满血原生deepseek-r1
@@ -1459,11 +1539,52 @@ A minimal LLM chat app that runs entirely in your browser</p>
 这种方式极大地降低了编程门槛，让非技术人员也能快速实现创意。</p>
 <p>llm 时代普通程序员能做的事
     前端的ui
-    提示词工程
+    提示词工程/上下文工程
     rag
     mcp
     Workflow 工作流
     本地部署llm
-    使用 氛围编程（Vibe Coding） 加速开发</p>
+    使用 氛围编程（Vibe Coding） 加速开发
+    调用api实现各种应用/开发 agents或chatbot</p>
 <p>尝试使用云服务实现一次微调？</p>
 <p>提示词工程的 多轮对话 ？</p>
+<p>OpenAI 的 DALL-E 和 Stable Diffusion</p>
+<p>大模型
+    开发商
+        通常开发商都有自己的api和开发平台
+    供应商 这里特指只提供接口的
+        OpenRouter
+            好像除了 OpenRouter 之外没有特别好的专门的 供应商
+        <a href="https://dmxapi.cn/">https://dmxapi.cn/</a>
+            一个 Key 用全球大模型
+            仅修改 Key和 Base url就可使用 
+    开发平台
+        训练 和 微调</p>
+<p>LLaMA的全称是
+Large Language Model Meta AI，
+直译为“大语言模型元AI”。
+由于“Llama”在西班牙语中意为“羊驼”，因此社区也将其昵称为羊驼系模型。</p>
+<p>LLa M A
+LLa -&gt; Large Language Model
+M -&gt; Meta
+A -&gt; AI</p>
+<p>Hugging Face 最流行的模型库
+ModelScope 由中国厂商主导的模型库
+ollama 用于本地部署 ai ，也提供模型库
+lm studio 用于本地部署 ai ，也提供模型库
+vLLM 用于本地部署 ai ，没有提供模型库，一般是生产环境，入门比较难</p>
+<p>BLOOM
+BigScience Large Open-science Open-access Multilingual Language Model
+<a href="https://bigscience.huggingface.co/">https://bigscience.huggingface.co/</a>
+<a href="https://bigscience.notion.site/BigScience-214dc9a8c1434d7bbcddb391c383922a">https://bigscience.notion.site/BigScience-214dc9a8c1434d7bbcddb391c383922a</a>
+<a href="https://huggingface.co/bigscience">https://huggingface.co/bigscience</a></p>
+<p>BLOOM 是一个由 BigScience 工作组主导、社区驱动开发的大型开源多语言预训练语言模型。
+目标是提供一个可公开审查、可重复、支持多语言研究与应用的替代闭源大模型。</p>
+<p>BigScience 是一个由 Hugging Face 发起、面向全球的开放协作研究工作坊，
+旨在以大规模、多学科、开源和以伦理为导向的方式开发大型多语种语言模型与配套数据集。
+该项目集合了来自学术界、工业界和独立研究者的数百到上千名贡献者，参考 CERN 等大型科学合作模式，
+把大型语言模型（LLM）建设当作“公共科研基础设施”来组织。</p>
+<p>RLHF
+Reinforcement Learning from Human Feedback
+人类反馈强化学习</p>
+<p>Zero-shot / Few-shot Learning（零样本/少样本学习）</p>
