--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -157,23 +157,136 @@
 <pre><code>  curl -v -L www.baidu.com
   curl -v -L www.cip.cc
   curl -v -L ip-api.com
+  curl -i -v -L --proxy socks5://127.0.0.1:1080 ip-api.com
+  curl -i -v -L --proxy http://127.0.0.1:1081 ip-api.com
+  curl -i -v -L --proxy http://127.0.0.1:1081 https://registry-1.docker.io/v2/
 </code></pre>
 </li>
 </ul>
-&lt;!--
-
-nohup ss-local -s host -p 61813 -k windows@163.qq -m chacha20-ietf-poly1305 -l 1080 &gt;&gt; out.log 2&gt;&amp;1 &amp;
-
-用于定时启动的脚本
-```
-# ssserver-startup.ps1
+<h3>shadowsocks-rust</h3>
+<p>通过 cargo 安装</p>
+<ol>
+<li>下载 rust 的二进制文件
+curl -L -O <a href="https://static.rust-lang.org/dist/rust-1.91.1-x86_64-unknown-linux-gnu.tar.xz">https://static.rust-lang.org/dist/rust-1.91.1-x86_64-unknown-linux-gnu.tar.xz</a></li>
+<li>下载完后运行安装命令
+tar -xJf rust-1.91.1-x86_64-unknown-linux-gnu.tar.xz
+cd rust-1.91.1-x86_64-unknown-linux-gnu.tar.xz
+bash install.sh</li>
+<li>再用 cargo 安装 shadowsocks-rust
+cargo install shadowsocks-rust</li>
+</ol>
+<p>直接下二进制文件</p>
+<ol>
+<li>下载
+curl -L -O <a href="https://github.com/shadowsocks/shadowsocks-rust/releases/download/v1.23.5/shadowsocks-v1.23.5.x86_64-unknown-linux-gnu.tar.xz">https://github.com/shadowsocks/shadowsocks-rust/releases/download/v1.23.5/shadowsocks-v1.23.5.x86_64-unknown-linux-gnu.tar.xz</a></li>
+<li>解压
+tar -xJf shadowsocks-v1.23.5.x86_64-unknown-linux-gnu.tar.xz
+解压完后当前目录就会多出这几个文件
+ssserver
+ssurl
+ssservice
+ssmanager
+sslocal</li>
+</ol>
+<p>在本地编译
+通过docker安装</p>
+<p>安装依赖
+yum install epel-release -y
+yum install gcc gettext autoconf libtool automake make pcre-devel asciidoc xmlto c-ares-devel libev-devel libsodium-devel mbedtls-devel -y</p>
+<p>下载源码
+curl -L -O <a href="https://github.com/shadowsocks/shadowsocks-rust/archive/refs/tags/v1.23.5.tar.gz">https://github.com/shadowsocks/shadowsocks-rust/archive/refs/tags/v1.23.5.tar.gz</a></p>
+<p>编译</p>
+<p>安装</p>
+<p>curl <a href="https://sh.rustup.rs">https://sh.rustup.rs</a> -sSf | sh</p>
+<p>curl -L -v -o rustup.sh <a href="https://sh.rustup.rs">https://sh.rustup.rs</a>
+sh rustup.sh
+cargo install shadowsocks-rust</p>
+<p>curl -L -v -O <a href="https://static.rust-lang.org/dist/rust-1.91.1-aarch64-unknown-linux-gnu.tar.xz">https://static.rust-lang.org/dist/rust-1.91.1-aarch64-unknown-linux-gnu.tar.xz</a>
+curl -L -O <a href="https://static.rust-lang.org/dist/rust-1.91.1-aarch64-unknown-linux-gnu.tar.xz">https://static.rust-lang.org/dist/rust-1.91.1-aarch64-unknown-linux-gnu.tar.xz</a>
+tar -Jxf rust-1.91.1-aarch64-unknown-linux-gnu.tar.xz
+cd rust-1.91.1-aarch64-unknown-linux-gnu.tar
+bash install.sh
+docker pull ghcr.io/shadowsocks/sslocal-rust:latest</p>
+<p>docker run --name sslocal-rust \
+  --restart always \
+  -p 1080:1080/tcp \
+  -v /path/to/config.json:/etc/shadowsocks-rust/config.json \
+  -dit ghcr.io/shadowsocks/sslocal-rust:latest</p>
+<p>docker run --name sslocal-rust \
+  --restart always \
+  -p 1080:1080/tcp \
+  -dit ghcr.io/shadowsocks/sslocal-rust:latest \
+  -s host -p 61813 -k windows@163.qq-m chacha20-ietf-poly1305 -l 1080</p>
+<p>docker run --rm -it \
+  --entrypoint=/bin/sh \
+  ghcr.io/shadowsocks/sslocal-rust:latest</p>
+<p>docker run --name sslocal-rust \
+  --restart always \
+  -p 1080:1080/tcp \
+  ghcr.io/shadowsocks/sslocal-rust:latest \
+  sslocal -s host:61813 -k windows@163.qq -m chacha20-ietf-poly1305 -b 0.0.0.0:1080</p>
+<p>docker run --name sslocal-rust \
+  --restart always \
+  -p 1080:1080/tcp \
+  -p 1081:1081/tcp \
+  -v ~/ss-local-config.json:/etc/shadowsocks-rust/config.json:ro \
+  ghcr.io/shadowsocks/sslocal-rust:latest \
+  sslocal -c /etc/shadowsocks-rust/config.json</p>
+<p>docker run --name sslocal-rust \
+  --restart always -d \
+  -p 1080:1080/tcp \
+  -v ~/ss-local-config.json:/etc/shadowsocks-rust/config.json:ro \
+  ghcr.io/shadowsocks/sslocal-rust:latest \
+  sslocal -c /etc/shadowsocks-rust/config.json</p>
+<p>docker run --rm -it \
+  --entrypoint=/bin/sh \
+  -v ~/ss-local-config.json:/etc/shadowsocks-rust/config.json \
+  ghcr.io/shadowsocks/sslocal-rust:latest</p>
+<p>docker pull busybox:1.37-uclibc</p>
+<p>{
+    // Server configuration
+    // listen on :: for dual stack support, no need add [] around.
+    "server": " ",
+    // Change to use your custom port number
+    "server_port": 61813,
+    "method": " ",
+    "password": "windows@163.qq",
+    // Server: TCP socket timeout in seconds.
+    // Client: TCP connection timeout in seconds.
+    // Omit this field if you don't have specific needs.
+    "timeout": 7200,</p>
+<pre><code>// Extended multiple local configuration
+"locals": [
+    {
+        // SOCKS5, SOCKS4/4a local server
+        "protocol": "socks",
+        // Basic configuration, a SOCKS5 local server
+        "local_address": "0.0.0.0",
+        "local_port": 1080,
+        // OPTIONAL. Setting the `mode` for this specific local server instance.
+        // If not set, it will derive from the outer `mode`
+        "mode": "tcp_only"
+    },
+    {
+        // HTTP local server (feature = "local-http")
+        "protocol": "http",
+        // Listen address
+        "local_address": "0.0.0.0",
+        "local_port": 1081
+    }
+]
+</code></pre>
+<p>}
+&lt;!--</p>
+<p>docker inspect --format='{{json .Config.Entrypoint}}'</p>
+<p>nohup ss-local -s host -p 61813 -k windows@163.qq -m chacha20-ietf-poly1305 -l 1080 &gt;&gt; out.log 2&gt;&amp;1 &amp;</p>
+<p>用于定时启动的脚本</p>
+<pre><code># ssserver-startup.ps1
 $host.UI.RawUI.WindowTitle="ssserver"
 ssserver -p 61304 -k windows@163.qq -m chacha20-ietf-poly1305
-```
-
-用于定时重启的脚本
-```
-# ssserver-restart.ps1
+</code></pre>
+<p>用于定时重启的脚本</p>
+<pre><code># ssserver-restart.ps1
 Get-Process | Where-Object {$_.MainWindowTitle -eq "ssserver"} ;
 Start-Sleep -Seconds 1;
 Get-Process | Where-Object {$_.MainWindowTitle -eq "ssserver" -and $_.Name -eq "powershell"} | Stop-Process ;
@@ -183,15 +296,11 @@ Start-Sleep -Seconds 1;
 Get-Process | Where-Object {$_.MainWindowTitle -eq "ssserver"} | Stop-Process ;
 Start-Sleep -Seconds 1;
 powershell -File "C:\Users\Administrator\Desktop\ssserver-startup.ps1" ;
-```
-
-用于新建计划任务的命令
-```
-Register-ScheduledTask -TaskName "ssserver-restart" -Trigger (New-ScheduledTaskTrigger -Daily -At 2am) -Action (New-ScheduledTaskAction -Execute "powershell" -Argument " -File `"C:\Users\Administrator\Desktop\ssserver-restart.ps1`" ");
-```
-
---&gt;
-
+</code></pre>
+<p>用于新建计划任务的命令</p>
+<pre><code>Register-ScheduledTask -TaskName "ssserver-restart" -Trigger (New-ScheduledTaskTrigger -Daily -At 2am) -Action (New-ScheduledTaskAction -Execute "powershell" -Argument " -File `"C:\Users\Administrator\Desktop\ssserver-restart.ps1`" ");
+</code></pre>
+<p>--&gt;</p>
 <h2>使用 privoxy 将 socks5 转换为 http 代理</h2>
 <p>安装</p>
 <pre><code>sudo apt install privoxy
@@ -211,6 +320,14 @@ systemctl enable privoxy
 <pre><code>export http_proxy=http://127.0.0.1:1081; \
 export HTTPS_PROXY=http://127.0.0.1:1081; \
 export ALL_PROXY=socks5h://127.0.0.1:1080
+
+export http_proxy= ; \
+export HTTPS_PROXY= ; \
+export ALL_PROXY=
+
+export -n http_proxy ; \
+export -n HTTPS_PROXY ; \
+export -n ALL_PROXY
 </code></pre>
 <h2>VS 和 VC 库 的对应关系</h2>
 <table>
@@ -964,9 +1081,10 @@ tools.jar 是工具类库。</p>
 java -Dfile.encoding=UTF-8 -classpath .;./junit4.jar;./org.hamcrest.core_1.3.0.jar JunitRunner
 </code></pre>
 <h2>python 的 http 服务和 cgi</h2>
-<blockquote><p>python 的 cgi 模块在 3.13 被移除了
+<blockquote><p>python 的 cgi 模块在 3.15 被移除了
 <a href="https://docs.python.org/zh-cn/3.12/library/cgi.html">https://docs.python.org/zh-cn/3.12/library/cgi.html</a>
 <a href="https://peps.python.org/pep-0594/#cgi">https://peps.python.org/pep-0594/#cgi</a></p>
+<p>3.14 是唯一一个既有 cgi 也有 tls 的版本</p>
 </blockquote>
 <p>python 一行命令启动 http 服务</p>
 <pre><code class="lang-sh"># 最简单的 http 服务
@@ -1189,6 +1307,12 @@ nc 理论上也可以实现，但一行代码会写得非常长
 <li>TensorFlow</li>
 <li>Keras</li>
 <li>sklearn</li>
+</ul>
+</li>
+<li>web框架<ul>
+<li>Django</li>
+<li>Flask</li>
+<li>FastAPI</li>
 </ul>
 </li>
 <li>其它<ul>
@@ -1414,6 +1538,7 @@ sudo systemctl restart docker
 </code></pre>
 <p>查看环境变量有没有设置成功</p>
 <pre><code>sudo systemctl show --property=Environment docker
+docker info | grep -i proxy
 </code></pre>
 <h3>构建镜像时的代理</h3>
 <h3>运行容器时的代理</h3>
@@ -3235,5 +3360,72 @@ python3 -m http.server --bind 127.0.0.1 8082
 
 vi api.js
 , {credentials: 'include'}
+
+
+
+安装不同版本的python
+
+寻找可以安装的python
+yum list python*
+yum list python3*
+yum install python3.1*
+
+安装新版python
+yum install python3.11
+把新版python加入到 alternatives
+alternatives --install /usr/bin/python python /usr/bin/python3.11 1
+配置默认python版本，这一步需要手动选择一个版本
+alternatives --config python
+显示默认python版本
+alternatives --display python
+
+alternatives 是一个多版本管理工具，一般用在 CentOS/RHEL
+update-alternatives 和 alternatives 类似，命令也基本一样，一般用在 debian
+在 CentOS/RHEL 中， update-alternatives 是 alternatives 的别名
+
+alternatives 是一个 Linux 系统管理工具，主要用于管理同一命令的多个可执行文件版本（例如不同版本的 Java、Python等）
+它通过符号链接机制实现，核心目标是解决 "多版本共存" 和 "命令路径冲突" 问题。
+三层链接结构
+    第一层：用户调用标准路径（如 /usr/bin/java）  
+    第二层：指向 /etc/alternatives/java（由工具管理的符号链接）  
+    第三层：指向实际程序路径（如 /usr/lib/jvm/java-17-openjdk/bin/java）
+/usr/bin/java → /etc/alternatives/java → /usr/lib/jvm/java-17-openjdk/bin/java
+
+
+
+python的多文件编程
+    同级目录导入
+        文件名即是模块名
+    包结构组织导入
+        my_package/
+        ├── __init__.py
+        ├── math_utils.py
+        └── greetings.py
+        必须包含__init__.py文件（可为空）
+            作用是将一个文件夹变为一个Python模块
+            导入包的时候，实际上是导入了它的__init__.py文件
+    跨目录动态导入
+        使用sys.path.append()添加搜索路径
+
+模块 (Module)
+    一个 .py 文件就是一个模块
+包 (Package)
+    一个包含多个模块（和子包）的目录
+
+python 中的框架(framework)和库(library)本质上是 包
+python 的包本质上是 模块
+
+import 模块[.模块]* [as 别名]
+from 模块[.模块]* import 成员 [as 别名]
+成员 可以是模块 ，可以是模块中的类，可以是模块中的函数
+
+Python会按照下面的路径列表顺序地查找我们需要的模块：
+    当前的工作目录；
+    PYTHONPATH（环境变量）中的每一个目录；
+    Python 默认的安装目录
+    虚拟环境路径
+    site-packages路径
+    动态引入的目录 sys.path.append
+        sys.path 属性总是包含一个默认路径的列表
 
 --&gt;
