--- a/f2h2h1.github.io/关于字符编码的一些坑.html
+++ b/f2h2h1.github.io/关于字符编码的一些坑.html
@@ -1067,6 +1067,19 @@ int main()
 </code></pre>
 <h3>utf-32 和 ucs-4</h3>
 <h3>组合字</h3>
+&lt;!--
+抽象字 (abstract character)
+编码形式 (encode form)
+编码字 (encoded character) 
+字素 (Grapheme)
+字素簇 (Grapheme Cluster)
+组合字 (Combining Character)
+
+感觉还是有很多概念没有理清，有空要认真看看unicode的规范
+https://unicode.org/versions/
+https://www.unicode.org/versions/Unicode17.0.0/
+--&gt;
+
 <h3>其它</h3>
 <p>通用区域数据存储库 (Common Locale Data Repository, CLDR)</p>
 <ul>
