--- a/f2h2h1.github.io/在magento2中使用persisted-query.html
+++ b/f2h2h1.github.io/在magento2中使用persisted-query.html
@@ -18,16 +18,22 @@
 <pre><code>composer require scandipwa/persisted-query:^2.2
 </code></pre>
 </li>
-<li><p>修改配置文件 <code>app/etc/env.php</code> ，在 <code>cache</code>中加上这一段</p>
-<pre><code> 'persisted-query' =&gt; [
-     'redis' =&gt; [
-         'host' =&gt; 'localhost',
-         'scheme' =&gt; 'tcp',
-         'port' =&gt; '6379',
-         'database' =&gt; '5'
-     ]
- ],
+<li><p>修改配置文件 <code>app/etc/env.php</code></p>
+<ul>
+<li>在 <code>cache</code>中加上这一段<pre><code>  'persisted-query' =&gt; [
+      'redis' =&gt; [
+          'host' =&gt; 'localhost',
+          'scheme' =&gt; 'tcp',
+          'port' =&gt; '6379',
+          'database' =&gt; '5'
+      ]
+  ],
 </code></pre>
+</li>
+<li>在 cache_types 中加上这一段<pre><code>'persisted_query_response' =&gt; 1,
+</code></pre>
+</li>
+</ul>
 </li>
 <li><p>修改配置文件 <code>app/etc/config.php</code></p>
 <pre><code>'ScandiPWA_PersistedQuery' =&gt; 1,
