--- a/iphyer.github.io/CS学习攻略.html
+++ b/iphyer.github.io/CS学习攻略.html
@@ -11,7 +11,7 @@
 <p>下面是知乎上的一个行动指南，这个是专为了准备博士或者硕士毕业不做科研找工作同学准备的。当然这个工作是做程序猿至于其他的需要你去求教别的同学。</p>
 <p><a href="http://zhuanlan.zhihu.com/p/19959253#!">编程入门指南 v1.4</a></p>
 <h1>目标</h1>
-<p>离开目标谈所谓的学习攻略或者计划是没有意义的。举个粒子，如果你的目标是前段工程师，你花很多时间研究 GPU 计算这是赤果果的南辕北辙。</p>
+<p>离开目标谈所谓的学习攻略或者计划是没有意义的。举个粒子，如果你的目标是前端工程师，你花很多时间研究 GPU 计算这是赤果果的南辕北辙。</p>
 <p>当然你要是说这是你个人的兴趣什么的我还是非常喜欢的。</p>
 <p>所谓我这个攻略其实侧重于两个部分，一个是实用基础，一个是偏向科学计算的其他技能。</p>
 <p>之所以是实用基础，是因为如果单单说基础那么像离散数学，微积分这些我感觉都是基础，但是既然我们是拿来主义和实用主义这些就都暂时缓一缓，不是说它们不重要而是你确实很少在实际工程中直接使用到它们。</p>
