--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -16,7 +16,7 @@
 <li><a href="#eyes-follow-mouse-cursor">Eyes Follow Mouse Cursor</a></li>
 </ul>
 <h3>Rainbow Artword</h3>
-<p>&lt;img alt="Rainbow Artword" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8t01qct5yj308q05ct8r.jpg" width="150"&gt;</p>
+<p>&lt;img alt="Rainbow Artword" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vxvgGly1h8t01qct5yj308q05ct8r.jpg" width="150"&gt;</p>
 <pre><code class="lang-html">&lt;style&gt;
   .wordart {
     display: inline-block;
@@ -48,7 +48,7 @@
 <li>A cool website: <a href="https://www.makewordart.com">https://www.makewordart.com</a></li>
 </ul>
 <h3>Hover Text Effects</h3>
-<p>&lt;img alt="Hover Text Effects" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8t04ox2d3j30e2048jrb.jpg" width="200"&gt;</p>
+<p>&lt;img alt="Hover Text Effects" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vxvgGly1h8t04ox2d3j30e2048jrb.jpg" width="200"&gt;</p>
 <p><a href="https://codepen.io/jh3y/pen/abGPKGO">https://codepen.io/jh3y/pen/abGPKGO</a></p>
 <pre><code class="lang-html">&lt;script src="https://unpkg.com/splitting/dist/splitting.min.js"&gt;&lt;/script&gt;
 &lt;style&gt;
@@ -92,7 +92,7 @@
 </ul>
 <h3>Apple-style OS dock</h3>
 <p>CSS only, no JS. This one would be pretty sweet as a nav on your portfolio.</p>
-<p>&lt;img alt="apple-style-dock" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/dwucuh.png" width="450"&gt;</p>
+<p>&lt;img alt="apple-style-dock" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/dwucuh.png" width="450"&gt;</p>
 <p><a href="https://codepen.io/jh3y/pen/GRwwWoV">https://codepen.io/jh3y/pen/GRwwWoV</a></p>
 <pre><code class="lang-css">.b:has(+ .b:hover),
 .b:hover + .b {
@@ -105,7 +105,7 @@
 <li>Build a wide gamut color palette with okLCH and inspects color with devtools: <a href="https://www.youtube.com/watch?v=6aCsAMgwnjE">https://www.youtube.com/watch?v=6aCsAMgwnjE</a></li>
 <li>Create a custom palette: <a href="https://www.radix-ui.com/colors/custom">https://www.radix-ui.com/colors/custom</a></li>
 </ul>
-<p>&lt;img alt="okLCH Color Palettes" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1he4xakrh5qj30tg0ka0ts.jpg" width="500"&gt;</p>
+<p>&lt;img alt="okLCH Color Palettes" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1he4xakrh5qj30tg0ka0ts.jpg" width="500"&gt;</p>
 <pre><code class="lang-html">&lt;style&gt;
   html {
     --hue: 140;
@@ -207,10 +207,10 @@
 <h3>Filter and backdrop filter</h3>
 <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter">backdrop-filter</a> has the same effect as <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/filter">filter</a>, with one notable difference — backdrop filters apply only to areas behind the element instead of to the element and its children. Filters, on the other hand, apply directly to the element and its children, and don’t affect anything behind the element.</p>
 &lt;figure&gt;
-  &lt;img alt="filter" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/a9f0c5e0-6f17-4068-b481-17bfac204791.png" width="500"&gt;
+  &lt;img alt="filter" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/a9f0c5e0-6f17-4068-b481-17bfac204791.png" width="500"&gt;
   &lt;figcaption&gt;filter example&lt;/figcaption&gt;
 &lt;/figure&gt;&lt;figure&gt;
-  &lt;img alt="backdrop-filter" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/t0635k.png" width="500"&gt;
+  &lt;img alt="backdrop-filter" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/t0635k.png" width="500"&gt;
   &lt;figcaption&gt;backdrop-filter example&lt;/figcaption&gt;
 &lt;/figure&gt;<pre><code class="lang-html">&lt;div class="parent"&gt;
   &lt;div class="blur"&gt;Blur&lt;/div&gt;
@@ -340,7 +340,7 @@
 &lt;/script&gt;
 </code></pre>
 <p><a href="https://codepen.io/argyleink/pen/GRPRJyM">https://codepen.io/argyleink/pen/GRPRJyM</a></p>
-<p>&lt;img alt="just the tabs" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/245b6eaa-8117-430d-a2aa-faa40e0e51a2.png" width="450"&gt;</p>
+<p>&lt;img alt="just the tabs" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/245b6eaa-8117-430d-a2aa-faa40e0e51a2.png" width="450"&gt;</p>
 <h3>Scroll-driven animations</h3>
 <p>At its simplest, the <code>animation-timeline</code> property lets us link any keyframe animation to the progress of scroll. They still run from 0-100%. But now, 0% is the scroll start position and 100% is the scroll end position.</p>
 <pre><code class="lang-css">@keyframes spin {
@@ -371,15 +371,15 @@ img {
   animation-range: entry 25% cover 50%;
 }
 </code></pre>
-<p>&lt;img alt="range-cover" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/sda-range-cover.png" width="450"&gt;
+<p>&lt;img alt="range-cover" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/sda-range-cover.png" width="450"&gt;
 &lt;br&gt;
-&lt;img alt="range-contain" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/sda-range-contain.png" width="450"&gt;
+&lt;img alt="range-contain" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/sda-range-contain.png" width="450"&gt;
 &lt;br&gt;
-&lt;img alt="range-entry" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/sda-range-entry.png" width="450"&gt;
+&lt;img alt="range-entry" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/sda-range-entry.png" width="450"&gt;
 &lt;br&gt;
-&lt;img alt="range-exit" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/sda-range-exit.png" width="450"&gt;
+&lt;img alt="range-exit" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/sda-range-exit.png" width="450"&gt;
 &lt;br&gt;
-&lt;img alt="range-percent" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/sda-range-percent.png" width="450"&gt;</p>
+&lt;img alt="range-percent" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/sda-range-percent.png" width="450"&gt;</p>
 <p>Because scroll-driven animations are only active when there is scrollable overflow, it is possible to use them as a mechanism to detect if an element can scroll or not.</p>
 <pre><code class="lang-css">.container {
   height: 250px;
@@ -434,7 +434,7 @@ img:hover {
 <li><code>box-sizing: border-box</code> will make the size of the content box equal to 0. In other words, we don’t see the image, but we see the background color since it covers the padding area.</li>
 </ul>
 <h3>Gradient border card</h3>
-<p>&lt;img alt="Gradient Border" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/gradient-border.png" width="100"&gt;</p>
+<p>&lt;img alt="Gradient Border" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/gradient-border.png" width="100"&gt;</p>
 <p>The two layers stack on top of each other:</p>
 <ul>
 <li>The conic-gradient layer applies over the content and padding areas.</li>
