--- a/kexizeroing.github.io/Container queries and :has selector.html
+++ b/kexizeroing.github.io/Container queries and :has selector.html
@@ -47,7 +47,7 @@
 <li><code>normal</code>: The element is not a query container for any container size queries, but remains a query container for container style queries.</li>
 </ul>
 &lt;figure&gt;
-  &lt;img alt="logical properties" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/logical-properties.png" width="500"&gt;
+  &lt;img alt="logical properties" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/logical-properties.png" width="500"&gt;
   &lt;figcaption&gt;logical properties&lt;/figcaption&gt;
 &lt;/figure&gt;<p>When applying styles to a container using container queries, you can use container query length units. These units specify a length relative to the dimensions of a query container.</p>
 <ul>
