--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -184,6 +184,7 @@
 <p>React's evolution from Hooks to Concurrent React: <a href="https://tigerabrodi.blog/reacts-evolution-from-hooks-to-concurrent-react">https://tigerabrodi.blog/reacts-evolution-from-hooks-to-concurrent-react</a></p>
 <p>What's new in React 19 by Lydia Hallie: <a href="https://www.youtube.com/watch?v=AJOGzVygGcY">https://www.youtube.com/watch?v=AJOGzVygGcY</a></p>
 <p>React Concurrent Features Overview: <a href="https://certificates.dev/blog/react-concurrent-features-an-overview">https://certificates.dev/blog/react-concurrent-features-an-overview</a></p>
+<p>React’s new era with async coordination primitives: <a href="https://blog.logrocket.com/the-next-era-of-react">https://blog.logrocket.com/the-next-era-of-react</a></p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: <a href="https://blog.vuejs.org">https://blog.vuejs.org</a></p>
@@ -274,6 +275,7 @@
 <p>Discover and share powerful prompts for AI models: <a href="https://shumerprompt.com">https://shumerprompt.com</a></p>
 <p>README for agents: <a href="https://agents.md">https://agents.md</a></p>
 <p>Apps SDK - Our framework to build apps for ChatGPT: <a href="https://developers.openai.com/apps-sdk">https://developers.openai.com/apps-sdk</a></p>
+<p>The Modern Software Developer - Stanford University: <a href="https://themodernsoftware.dev">https://themodernsoftware.dev</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: <a href="https://cs229.stanford.edu">https://cs229.stanford.edu</a></p>
