--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -184,7 +184,7 @@ Content-Disposition: attachment; filename="picture.png"
 <li>Fields are separated by the given boundary string. The browser must choose a boundary that will not appear in any of the fields, so this is why the boundary may vary between requests.</li>
 <li>Every field gets some sub headers before its data: <code>Content-Disposition: form-data</code>, the field name, the filename, followed by the data.</li>
 </ul>
-<p>&lt;img alt="form-data" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h7pzihd80yj31440gy40l.jpg" width="700"&gt;</p>
+<p>&lt;img alt="form-data" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vxvgGly1h7pzihd80yj31440gy40l.jpg" width="700"&gt;</p>
 <h3>Process the form data in Node.js</h3>
 <ol>
 <li><p>What does <code>body-parser</code> do with express? Originally, there was only <code>body-parser</code>, not <code>express.json()</code>. <code>body-parser</code> extracts the entire body portion of an incoming request stream and exposes it on <code>req.body</code>. As of Express version 4.16+, their own <code>body-parser</code> implementation is now included in the default Express package so there is no need for you to download another dependency.</p>
@@ -225,7 +225,7 @@ Content-Disposition: attachment; filename="picture.png"
 <h3>POST and GET</h3>
 <p>GET data is appended to the URL as a query string, so there is a hard limit to the amount of data you can transfer. <em>GET is idempotent</em>. POST data is included in the body of the HTTP request and isn't visible in the URL. As such, there's no limit to the amount of data you can transfer over POST.</p>
 <p>Responses to the POST method aren’t kept by most caches; if you send information in the path or query via GET, caches can store that information for the future.</p>
-<p>&lt;img alt="http-post-get" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/post-get-others.png" width="460"&gt;</p>
+<p>&lt;img alt="http-post-get" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/post-get-others.png" width="460"&gt;</p>
 <p>As far as security, both GET and POST are equally insecure when sent over plain HTTP — all data is visible to anyone intercepting the network traffic. Only HTTPS makes the request secure in transit, for both GET and POST. A packet sniffer will just see encrypted binary blobs, not readable content.</p>
 <ol>
 <li>HTTPS encrypts the URL path, query string, headers, and body — everything after the domain name.</li>
@@ -372,9 +372,9 @@ fetch(url).then(async response =&gt; {
 <blockquote><p>If Site A requests a page from Site B, the browser will actually fetch the requested page on the network level and check if the response headers list Site A as a permitted requester domain.</p>
 </blockquote>
 <p>&lt;br&gt;
-&lt;img alt="same-cross-origin" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/same-cross-origin.png" width="700"&gt;</p>
+&lt;img alt="same-cross-origin" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/same-cross-origin.png" width="700"&gt;</p>
 <p>&lt;br&gt;
-&lt;img alt="same-cross-site" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/same-site.png" width="700"&gt;</p>
+&lt;img alt="same-cross-site" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/same-site.png" width="700"&gt;</p>
 <h3>Simple requests</h3>
 <p>Simple requests don’t trigger a CORS preflight. It should meet all the following conditions:</p>
 <ul>
