--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -8,7 +8,7 @@
 <li>LangChain JS Tutorial: <a href="https://www.youtube.com/playlist?list=PL4HikwTaYE0EG379sViZZ6QsFMjJ5Lfwj">https://www.youtube.com/playlist?list=PL4HikwTaYE0EG379sViZZ6QsFMjJ5Lfwj</a></li>
 </ul>
 <h3>Components: Building Blocks of LangChain</h3>
-<p>&lt;img alt="langchain-components" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hct713lr8nj314q0u0dmp.jpg" width="650"&gt;</p>
+<p>&lt;img alt="langchain-components" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hct713lr8nj314q0u0dmp.jpg" width="650"&gt;</p>
 <ul>
 <li>Schema (Text, Messages, Documents)</li>
 <li>Models (LLMs, Chat Models, Text Embedding Models)</li>
