--- a/kexizeroing.github.io/Intro to Bun.html
+++ b/kexizeroing.github.io/Intro to Bun.html
@@ -8,6 +8,9 @@
 <li>Bun is a JavaScript bundler with best-in-class performance.</li>
 <li>Bun is a Jest-compatible test runner with support for snapshot testing, mocking, and code coverage.</li>
 </ul>
+<blockquote><p>Anthropic acquires Bun at Dec 2025: <a href="https://bun.com/blog/bun-joins-anthropic">https://bun.com/blog/bun-joins-anthropic</a></p>
+<p>Claude Code ships as a Bun executable to millions of users. If Bun breaks, Claude Code breaks. Anthropic has direct incentive to keep Bun excellent.</p>
+</blockquote>
 <h2>Quickstart</h2>
 <pre><code class="lang-sh">curl -fsSL https://bun.sh/install | bash
 
@@ -127,6 +130,19 @@ import.meta.env;   // An alias to `process.env`
 </code></pre>
 <blockquote><p>Bun's bundler API is inspired heavily by <code>esbuild</code>. Migrating to Bun's bundler from <code>esbuild</code> should be relatively painless. Bun's bundler does not include a built-in development server or file watcher. It's just a bundler.</p>
 </blockquote>
+<h2>Single-file executable</h2>
+<p>Bun’s bundler implements a <code>--compile</code> flag for generating a standalone binary from a TypeScript or JavaScript file.</p>
+<pre><code class="lang-sh">bun build ./cli.ts --compile --outfile mycli
+
+# It bundles cli.ts into an executable that can be executed directly
+./mycli
+
+# Cross-compile to other platforms
+bun build --compile --target=bun-linux-x64 ./index.ts --outfile myapp
+bun build --compile --target=bun-windows-x64 ./index.ts --outfile myapp
+bun build --compile --target=bun-darwin-arm64 ./index.ts --outfile myapp
+</code></pre>
+<p>All imported files and packages are bundled into the executable, along with a copy of the Bun runtime. All built-in Bun and Node.js APIs are supported.</p>
 <h2>Test Runner</h2>
 <p>Bun ships with a fast, built-in, Jest-compatible test runner. Define tests with a Jest-like API imported from the built-in <code>bun:test</code> module.</p>
 <pre><code class="lang-sh">bun test
@@ -207,11 +223,9 @@ app.get('/', (c) =&gt; {
 const port = parseInt(process.env.PORT!) || 3000
 console.log(`Running at http://localhost:${port}`)
 
-// export default app
 export default {
   port,
+  // app.fetch will be entry point of your application in Bun
   fetch: app.fetch
 };
 </code></pre>
-<blockquote><p>Hono supports TypeScript as a first-class. One of Hono’s unique features is its <a href="https://hono.dev/docs/guides/rpc">RPC</a> capability, which allows the server and client to share specifications using TypeScript types. This is something other frameworks don’t typically offer.</p>
-</blockquote>
