--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -1,6 +1,8 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/intro-to-typescript.md">仓库源文</a>，<a href="https://kexizeroing.github.io/intro-to-typescript">站点原文</a></h2>
 <p>TypeScript is a strongly typed programming language that builds on JavaScript. It is currently developed and maintained by Microsoft as an open source project. TypeScript supports multiple programming paradigms such as functional, generic, imperative, and object-oriented.</p>
 <p>Every time you write JavaScript in e.g. VS Code, TypeScript runs behind the curtains and gives you information on built-in APIs. In fact, a lot of people think that they can live without TypeScript because JavaScript support is so fantastic in modern editors. Guess what’s, it has always been TypeScript. <em>In VS Code, open a <code>.ts</code> file, <code>Cmd+Shift+P</code> enter "Select TypeScript Version" to check. There is a "Use VS Code's Version" and "Use Workspace Version" (this is from node_modules).</em></p>
+<blockquote><p>Even if you don't write your code in <code>.ts</code> files, you're probably using TypeScript. That's because TypeScript is the IntelliSense engine. Even if you're not using VSCode, if your editor gives you code completion, parameter info, quick info, member lists, etc. while writing JS code, you are almost certainly running the TypeScript language service.</p>
+</blockquote>
 <h2>Setting up TypeScript</h2>
 <p>To start off, the TypeScript compiler will need to be installed in order to convert TypeScript files into JavaScript files. To do this, TypeScript can either be installed globally or only available at the project level.</p>
 <p>Run <code>tsc --noEmit</code> that tells TypeScript that we just want to check types and not create any output files. If everything in our code is all right, <code>tsc</code> exits with no error. <code>tsc --noEmit --watch</code> will add a <code>watch</code> mode so TypeScript reruns type-checking every time you save a file.</p>
@@ -377,6 +379,11 @@ type MusicProductWithoutId =
 type MusicProductWithoutId = {
   title: string;
 };
+
+// Solution to fix: make our own distributive version of Omit
+type DistributiveOmit&lt;T, K extends keyof T&gt; = T extends any
+  ? Omit&lt;T, K&gt;
+  : never
 </code></pre>
 <blockquote><p>For orginal <code>Pick&lt;T, K extends keyof T&gt;</code>, when <code>T</code> is a union, <code>keyof T</code> does not mean “all keys from all members” — it means the intersection of keys present in every member of the union.</p>
 <p><strong>Distributivity rule:</strong> In <code>T extends U ? X : Y</code>, if <code>T</code> is a naked type parameter and <code>T</code> is a union, TypeScript applies the conditional separately to each union member and unions the results.</p>
@@ -796,10 +803,12 @@ type FormSchemaType = z.infer&lt;typeof formSchema&gt;;
 <p><a href="https://github.com/arktypeio/arktype">ArkType</a> is a TypeScript-first runtime validation library designed to offer concise, composable, and powerful type definitions with zero dependencies, optimized from editor to runtime.</p>
 </blockquote>
 <p>&lt;br&gt;
-&lt;img alt="izod-and-arktype" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/zod-and-arktype.png" width="600"&gt;</p>
+&lt;img alt="izod-and-arktype" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/zod-and-arktype.png" width="600"&gt;</p>
 <h2>Adding Type Check to JavaScript</h2>
 <p>TypeScript provides code analysis for JavaScript and VS Code gives us TypeScript out of the box (TypeScript language server). With the addition of <code>//@ts-check</code> as the very first line in our JavaScript file, TypeScript became active and started to add red lines to code pieces that just don’t make sense.</p>
 <p><a href="https://deno.com/blog/document-javascript-package">JSDoc</a> is a way to annotate JavaScript code using comments. JSDoc comments are any block comments that begin with <code>/**</code> and end with <code>*/</code> that precede a block of code. The comments can span multiple lines. Each line should start with <code>*</code> and should be indented by one space. JSDoc supports a variety of tags that can be used to provide additional information about your symbols, such as <code>@param</code> for parameters, <code>@returns</code> for the return value, or <code>@typeParam</code> for type parameters. TypeScript uses this annotations to get more information on our intended types.</p>
+<blockquote><p>It is also the TypeScript language service that is used to interpret JSDoc comments. That is why the TypeScript CHANGELOG often includes notes about JSDoc features. It also the reason your JSDoc-related IntelliSense can be governed by a <code>tsconfig.json</code> file and you can run <code>tsc</code> on a project typed with JSDoc comments.</p>
+</blockquote>
 <pre><code class="lang-js">// @ts-check
 /**
  * @param {number} numberOne
