--- a/kexizeroing.github.io/Learn 1-Line Layouts from Una.html
+++ b/kexizeroing.github.io/Learn 1-Line Layouts from Una.html
@@ -100,7 +100,7 @@ footer {
 <li>With <code>auto-fit</code>, when there are not enough grid items to fill the number of tracks created, those empty tracks are collapsed. <em>(Fit entire length of container)</em></li>
 <li>With <code>auto-fill</code>, everything is the same as <code>auto-fit</code>, except empty tracks are not collapsed. <em>(Doesn't fit entire length of the contaier)</em></li>
 </ul>
-<p>&lt;img alt="grid-auto-fit" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/68c40383-3e52-433a-88ee-9650cc9d601a.png" width="600"&gt;</p>
+<p>&lt;img alt="grid-auto-fit" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/68c40383-3e52-433a-88ee-9650cc9d601a.png" width="600"&gt;</p>
 <pre><code class="lang-css">/* Responsive CSS Grid */
 .smol-css-grid {
   --min: 15ch;
