--- a/kexizeroing.github.io/Learn from Advent of Vue.html
+++ b/kexizeroing.github.io/Learn from Advent of Vue.html
@@ -70,9 +70,9 @@ state.value = { count: 2 }
 <p>You don't need to import <code>defineProps</code> from Vue. <code>defineProps</code>, <code>defineEmits</code>, and <code>defineExpose</code> are <strong>compiler macros</strong> that are compiled away, and they are not actual functions in the Vue package. These are just hints for the compiler to create them nicely.</p>
 <blockquote><p>A compiler macro is special code that is processed by a compiler and converted into something else. They are effectively a clever form of string replacement.</p>
 </blockquote>
-<p>&lt;img alt="vue-cmp-props" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/vue-props.png" width="750"&gt;
+<p>&lt;img alt="vue-cmp-props" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/vue-props.png" width="750"&gt;
 &lt;br&gt;</p>
-<p>&lt;img alt="vue-setup-defineprops" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/vue-setup-defineprops.png" width="750"&gt;</p>
+<p>&lt;img alt="vue-setup-defineprops" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/vue-setup-defineprops.png" width="750"&gt;</p>
 <p>The output structure looks like what we had before with our <code>defineComponent</code> approach, and the only difference is that the compiler is creating this for us.</p>
 <h3>Recursive Tree</h3>
 <ol>
