--- a/kexizeroing.github.io/Learn the new frontend build tool Vite.html
+++ b/kexizeroing.github.io/Learn the new frontend build tool Vite.html
@@ -18,8 +18,8 @@
 esbuild script.js --bundle --minify --outfile=bundle.js
 </code></pre>
 <p>Vite only support ES Modules, and parsing the native ES Modules means it will read the <code>export</code> and <code>import</code> lines from your code. It will convert those lines into HTTP requests back to the server, where it will again read the <code>export</code> and <code>import</code> lines and make new requests. Vite also leverages HTTP headers to speed up full page reloads: source code module requests are made conditional via <code>304 Not Modified</code>, and dependency module requests are strongly cached via <code>Cache-Control</code> header.</p>
-<p>&lt;img alt="webpack" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hc08w7udwkj31a20jmabm.jpg" width="600"&gt;</p>
-<p>&lt;img alt="vite" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hc08w9irx0j313w0hwmyf.jpg" width="600"&gt;</p>
+<p>&lt;img alt="webpack" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hc08w7udwkj31a20jmabm.jpg" width="600"&gt;</p>
+<p>&lt;img alt="vite" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hc08w9irx0j313w0hwmyf.jpg" width="600"&gt;</p>
 <blockquote><p>Webpack</p>
 <ul>
 <li>supported modules: ES Modules, CommonJS and AMD Modules</li>
@@ -82,7 +82,7 @@ const fooCjs = foo_fooCjs["foo"];
 </ul>
 <h3>Static Assets</h3>
 <ul>
-<li>Importing a static asset will return the resolved public URL when it is served. The image is included in the module graph. For example, imgUrl will be <code>/img.png</code> during development, and become <code>/assets/img.2d8efhg.png</code> in the production build. <code>url()</code> references in CSS are handled the same way.</li>
+<li>Importing a static asset will return the resolved public URL when it is served. The image is included in the module graph. <em>(What get imported it's just the path to the file, not the actual image.)</em> For example, importing imgUrl will be <code>/img.png</code> during development, and become <code>/assets/img.2d8efhg.png</code> in the production build. <code>url()</code> references in CSS are handled the same way.</li>
 <li>Common image, media, and font filetypes are detected as assets automatically.</li>
 <li>If you have assets that are must retain the exact same file name (without hashing) or you simply don't want to have to import an asset first just to get its URL, then you can place the asset in a special <code>public</code> directory under your project root. <strong>Assets in this directory will be served at root path <code>/</code> during dev, and copied to the root of the dist directory as-is</strong>.</li>
 </ul>
