--- a/kexizeroing.github.io/Notes on Model Context Protocol.html
+++ b/kexizeroing.github.io/Notes on Model Context Protocol.html
@@ -245,5 +245,6 @@ Until now, support for MCP was limited to Claude Desktop through local servers. 
 <li><a href="https://github.com/vercel-labs/mcp-for-next.js">https://github.com/vercel-labs/mcp-for-next.js</a></li>
 <li><a href="https://github.com/punkpeye/fastmcp">https://github.com/punkpeye/fastmcp</a></li>
 <li><a href="https://developer.chrome.com/blog/chrome-devtools-mcp">https://developer.chrome.com/blog/chrome-devtools-mcp</a></li>
+<li><a href="https://developer.chrome.com/blog/autofix-runtime-devtools-mcp">https://developer.chrome.com/blog/autofix-runtime-devtools-mcp</a></li>
 <li><a href="https://developers.openai.com/apps-sdk/build/mcp-server">https://developers.openai.com/apps-sdk/build/mcp-server</a></li>
 </ul>
