--- a/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
+++ b/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
@@ -2,7 +2,7 @@
 <h2>What are Vector Embeddings?</h2>
 <p>Vector embeddings are central to many NLP, recommendation, and search algorithms. We create vector embeddings, which are just lists of numbers, to perform various operations with them. A whole paragraph of text or any other object can be reduced to a vector.</p>
 <p>There is something special about vectors that makes them so useful. This representation makes it possible to translate semantic similarity as perceived by humans to proximity in a vector space. In other words, when we represent real-world objects and concepts such as images, audio recordings, news articles, and user profiles as vector embeddings, the semantic similarity of these objects and concepts can be quantified by how close they are to each other as points in vector spaces.</p>
-<p>&lt;img alt="sentence_embeddings" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hcc5elwuuoj313s0e075k.jpg" width="550" /&gt;</p>
+<p>&lt;img alt="sentence_embeddings" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hcc5elwuuoj313s0e075k.jpg" width="550" /&gt;</p>
 <p>We train models to translate objects to vectors. A deep neural network is a common tool for training such models. The resulting embeddings are usually high dimensional (up to two thousand dimensions) and dense (all values are non-zero). For text data, models such as Word2Vec, GloVe (Global Vectors for Word Representation), and BERT transform words, sentences, or paragraphs into vector embeddings. Images can be embedded using models such as convolutional neural networks (CNNs).</p>
 <h3>Tokens and Embeddings</h3>
 <p>Tokens are the basic units of data processed by LLMs. In the context of text, a token can be a word, part of a word (subword), or even a character — depending on the tokenization process.</p>
@@ -32,9 +32,9 @@ assert(enc.decode(enc.encode("hello world")) === "hello world");
 <li>It ensures that the most common words are represented as a single token while the rare words are broken down into two or more subword tokens. (Looking for the most frequent pairing, merge them, and perform the same iteration again and again until we reach our token limit or iteration limit.)</li>
 </ul>
 </blockquote>
-<p>&lt;img alt="BPE-tokenize" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/BPE-tokenize.png" width="450" /&gt;
+<p>&lt;img alt="BPE-tokenize" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/BPE-tokenize.png" width="450" /&gt;
 &lt;br&gt;
-&lt;img alt="gpt-tokens" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/gpt-tokens.png" width="600" /&gt;</p>
+&lt;img alt="gpt-tokens" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/gpt-tokens.png" width="600" /&gt;</p>
 <p>Embeddings are advanced vector representations of tokens. They try to capture the most nuance, connections, and semantic meanings between tokens. Each embedding is generally a series of real numbers on a vector space computed by a neural network. They are the “real inputs” of LLMs.</p>
 <p>If you load a model from libraries, the embedding table is included automatically as part of the model’s weights. The model looks up each token ID in the embedding table (Token Embedding Matrix) to get token embeddings. These are token-level embeddings. To get an embedding for the whole sentence, you need to combine these token embeddings into one vector that represents the full sentence, which yields a sentence-level embedding.</p>
 <blockquote><p>Token embeddings alone do not capture word order, models add positional information (Position Embedding Matrix) to embeddings. In general, we use the postion in the prompt to define a samll offset to the token's embeddings to slightly move it in the embedding space.</p>
@@ -56,9 +56,9 @@ print(embedded_query) # [-0.0013594045786472937, -0.03437049808954925, ...]
 <li>Key: Here is what I can offer</li>
 <li>Value: Here is the actual information if we match</li>
 </ul>
-<p>&lt;img alt="self-attention" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/self-attention.png" width="600" /&gt;</p>
+<p>&lt;img alt="self-attention" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/self-attention.png" width="600" /&gt;</p>
 <p>&lt;br&gt;
-&lt;img alt="embedding-matrix" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/self-attention-qkv.png" width="600" /&gt;</p>
+&lt;img alt="embedding-matrix" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/self-attention-qkv.png" width="600" /&gt;</p>
 <h2>Storing embeddings in Postgres with pgvector</h2>
 <p>How can I retrieve K nearest embedding vectors quickly? For searching over many vectors quickly, we recommend using a vector database.</p>
 <p><a href="https://github.com/pgvector/pgvector">pgvector</a> is an open-source vector similarity search for Postgres. Once we have generated embeddings on multiple texts, it is trivial to calculate how similar they are using vector math operations like cosine distance. A perfect use case for this is search. Your process might look something like this:</p>
@@ -204,7 +204,7 @@ async function getDocuments(urls: string[]) {
 </code></pre>
 <h2>GPT and LangChain Chatbot for PDF docs</h2>
 <p><a href="https://github.com/mayooear/gpt4-pdf-chatbot-langchain">gpt4-pdf-chatbot-langchain</a> uses LangChain and Pinecone to build a chatbot for large PDF docs. Convert your PDF to embeddings:</p>
-<p>&lt;img alt="pdf-to-embeddings" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hccg4ncf7vj32140fu0x9.jpg" width="800" /&gt;</p>
+<p>&lt;img alt="pdf-to-embeddings" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hccg4ncf7vj32140fu0x9.jpg" width="800" /&gt;</p>
 <pre><code class="lang-js">// https://github.com/mayooear/gpt4-pdf-chatbot-langchain/blob/main/scripts/ingest-data.ts
 
 /* load raw docs from the pdf file in the directory */
@@ -251,7 +251,7 @@ for (let i = 0; i &lt; docs.length; i += chunkSize) {
 <li>Vector Databases Explained: <a href="https://vercel.com/guides/vector-databases">https://vercel.com/guides/vector-databases</a></li>
 <li>What is a Vector Database: <a href="https://www.pinecone.io/learn/vector-database">https://www.pinecone.io/learn/vector-database</a></li>
 </ul>
-<p>&lt;img alt="vectorstore" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hd08amw1npj30u00z9djx.jpg" width="700"&gt;</p>
+<p>&lt;img alt="vectorstore" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vOhrAly1hd08amw1npj30u00z9djx.jpg" width="700"&gt;</p>
 <p>Several algorithms can facilitate the creation of a vector index. Their goal is to enable fast querying by creating a data structure that can be traversed quickly. They will commonly transform the representation of the original vector into a compressed form to optimize the query process.</p>
 <p>HNSW (Hierarchical Navigable Small World) creates a hierarchical, tree-like structure where each node of the tree represents a set of vectors. The edges between the nodes represent the similarity between the vectors. The algorithm starts by creating a set of nodes, each with a small number of vectors. The algorithm then examines the vectors of each node and draws an edge between that node and the nodes that have the most similar vectors to the one it has. When we query an HNSW index, it uses this graph to navigate through the tree, visiting the nodes that are most likely to contain the closest vectors to the query vector.</p>
 <h2>Techniques beyond basic RAG</h2>
