--- a/kexizeroing.github.io/React 19’s enhanced form handling.html
+++ b/kexizeroing.github.io/React 19’s enhanced form handling.html
@@ -277,8 +277,8 @@ function ComponentOne() {
 </ul>
 <h2>Next.js sever actions and <code>&lt;Form&gt;</code> component</h2>
 <p>Next.js Server Actions is a feature that allows you to run server-side code directly from client components. It is part of Next.js's full-stack framework features, eliminating the need for API routes for basic form handling.</p>
-<p>&lt;img alt="next-server-actions-1" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/next-server-actions-1.png" width="650"&gt;</p>
-<p>&lt;img alt="next-server-actions-2" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/next-server-actions-2.png" width="650"&gt;
+<p>&lt;img alt="next-server-actions-1" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/next-server-actions-1.png" width="650"&gt;</p>
+<p>&lt;img alt="next-server-actions-2" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/next-server-actions-2.png" width="650"&gt;
 &lt;br&gt;</p>
 <p><code>useActionState</code> helps you deal with loading and error states.</p>
 <pre><code class="lang-ts">// contact-form.tsx
