--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -92,7 +92,7 @@
 <blockquote><p>When an image appears to load gradually from top to bottom, it's because it's being downloaded sequentially (the byte stream is arranged top-down). As data arrives, the browser begins rendering the image line by line. Decoding plays a role but is typically fast enough not to be noticeable.</p>
 </blockquote>
 <p>@addyosmani <a href="https://addyosmani.com/blog/script-priorities">JavaScript Loading Priorities in Chrome</a>:
-&lt;img alt="JavaScript Loading Priorities" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/addyosmani.com_blog_script-priorities%20(1).png" width="800"&gt;</p>
+&lt;img alt="JavaScript Loading Priorities" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/addyosmani.com_blog_script-priorities%20(1).png" width="800"&gt;</p>
 <h3>The DOMContentLoaded event</h3>
 <p>The <code>DOMContentLoaded</code> event fires once all of your deferred JavaScript (<code>&lt;script defer&gt;</code> and <code>&lt;script type="module"&gt;</code>) has finished running. It doesn't wait for other things like images, subframes, and async scripts to finish loading.</p>
 <ul>
