--- a/kexizeroing.github.io/Rice course - intro to database.html
+++ b/kexizeroing.github.io/Rice course - intro to database.html
@@ -10,7 +10,7 @@
 <p>SQLite is a serverless database engine. It functions as a lightweight library embedded directly into applications, reading and writing data from a single file on disk. This simplicity eliminates the need for a separate server process and makes SQLite highly portable. However, SQLite's concurrency model is more restrictive: while it allows multiple readers, only one process can write to the database at a time. <em>(If you have a Mac, sqlite3 should be available on there.)</em></p>
 <hr/>
 <p>The Relational Model is usually denoted using <code>LIKES (DRINKER, COFFEE)</code></p>
-<p>&lt;img alt="relation model" src="https://raw.gitmirror.com/kexiZeroing/blog-images/e267d5c748689a64a58514b9c6776a4499eff478/BD61-413F-89E1-3A76798F04B1.png" width="500"&gt;</p>
+<p>&lt;img alt="relation model" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/e267d5c748689a64a58514b9c6776a4499eff478/BD61-413F-89E1-3A76798F04B1.png" width="500"&gt;</p>
 <p><strong>Keys (If the key for two tuples are the same, they must be the same tuple)</strong></p>
 <ul>
 <li>Candidate Keys: A relation schema can have many keys, those that are minimal are CANDIDATE KEYs.</li>
@@ -46,7 +46,7 @@
 <li>Join: Cartesian product (aka: cross product)，Theta Join，Natural Join</li>
 <li>Union, Intersection, Difference</li>
 </ul>
-<p>&lt;img alt="algebra" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/DC50FBCB-B408-4495-A8D9-99383F8B05E9.png" width="500"&gt;</p>
+<p>&lt;img alt="algebra" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/DC50FBCB-B408-4495-A8D9-99383F8B05E9.png" width="500"&gt;</p>
 <blockquote><p>Left / Right Outer Join</p>
 <ul>
 <li>R LEFT OUTER JOIN S ON <code>R.&lt;att&gt; = S.&lt;att&gt;</code></li>
@@ -171,7 +171,7 @@ HAVING COUNT(*) &gt;= 3
 <li><code>DELETE FROM &lt;tableName&gt; WHERE &lt;condition&gt;;</code></li>
 </ul>
 <p><strong>Entity-Relationship Diagram (ERD)</strong></p>
-<p>&lt;img alt="ERD" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/E2C8-43B6-8005-2C212621341C.png" width="500"&gt;</p>
+<p>&lt;img alt="ERD" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/E2C8-43B6-8005-2C212621341C.png" width="500"&gt;</p>
 <ul>
 <li><code>(a, b)</code> 表示参与关系的最少数量和最多数量</li>
 <li>Associative Entities are used to represent Many-to-Many relations, basically a relation made up of primary keys. Typically implemented as a table.</li>
@@ -204,20 +204,20 @@ HAVING COUNT(*) &gt;= 3
 <li>No attribute has more than 1 value for each relation</li>
 <li>Addresses the "shape" of a tuple</li>
 </ul>
-<p>&lt;img alt="1st normal form" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/E31B-43F2-867D-F010EF70B182.png" width="450"&gt;</p>
+<p>&lt;img alt="1st normal form" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/E31B-43F2-867D-F010EF70B182.png" width="450"&gt;</p>
 <p><strong>2nd normal form</strong></p>
 <ul>
 <li>1st Normal Form +</li>
 <li>Every non-key attribute is functionally dependent on the entire key</li>
 <li>Addresses the relationships between key and non-key fields</li>
 </ul>
-<p>&lt;img alt="2nd normal form" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/CC97-41DF-96DC-23D4B859F476.png" width="450"&gt;</p>
+<p>&lt;img alt="2nd normal form" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/CC97-41DF-96DC-23D4B859F476.png" width="450"&gt;</p>
 <p><strong>3rd normal form</strong></p>
 <ul>
 <li>2nd Normal Form +</li>
 <li>No non-key attribute depends on another non-key attribute</li>
 </ul>
-<p>&lt;img alt="3rd normal form" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/A0D7-4968-A52C-10240A6C7230.png" width="500"&gt;</p>
+<p>&lt;img alt="3rd normal form" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/A0D7-4968-A52C-10240A6C7230.png" width="500"&gt;</p>
 <p><strong>BCNF</strong></p>
 <ul>
 <li>BCNF is an advanced version of the third normal form, and it is also known as the 3.5 Normal Form.</li>
@@ -339,4 +339,4 @@ To address the need for storage of non-relational data</p>
 </li>
 <li>column -&gt; field</li>
 </ul>
-<p>&lt;img alt="mongodb" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/6529-4D8C-8A31-CCA28EB64614.png" width="600"&gt;</p>
+<p>&lt;img alt="mongodb" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/6529-4D8C-8A31-CCA28EB64614.png" width="600"&gt;</p>
