--- a/kexizeroing.github.io/Setup a new mac.html
+++ b/kexizeroing.github.io/Setup a new mac.html
@@ -53,9 +53,9 @@
 <li>check npm config: <code>npm config ls</code></li>
 <li><code>npm config set registry https://registry.npmmirror.com</code> to change the registry, <code>npm config delete registry</code> to change back to default (<code>https://registry.npmjs.org/</code>), <code>npm get registry</code> to see the current set.</li>
 <li>set npm proxy <code>npm config set proxy http://127.0.0.1:7890</code> and remove this proxy <code>npm config delete proxy</code>
-&lt;img alt="npm proxy" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008i3skNly1gz5abxu18ij31bu0eijtx.jpg" width="700"&gt;</li>
+&lt;img alt="npm proxy" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008i3skNly1gz5abxu18ij31bu0eijtx.jpg" width="700"&gt;</li>
 <li><p>Global Node modules will be installed at <code>~/.nvm/versions/node/v12.13.0/bin/</code> if you use nvm.
-&lt;img alt="global node_modules" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/e6c9d24ely1h2zj27plslj218q04ydgm.jpg" width="700" /&gt;</p>
+&lt;img alt="global node_modules" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/e6c9d24ely1h2zj27plslj218q04ydgm.jpg" width="700" /&gt;</p>
 <blockquote><p>package manager mirrors: <a href="https://github.com/eryajf/Thanks-Mirror">https://github.com/eryajf/Thanks-Mirror</a></p>
 <ul>
 <li>Taobao: <a href="http://registry.npmmirror.com">http://registry.npmmirror.com</a></li>
