--- a/kexizeroing.github.io/Some network knowledge (in Chinese).html
+++ b/kexizeroing.github.io/Some network knowledge (in Chinese).html
@@ -1,7 +1,7 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/some-network-knowledge-chinese.md">仓库源文</a>，<a href="https://kexizeroing.github.io/some-network-knowledge-chinese">站点原文</a></h2>
 <h3>光纤入户</h3>
 <p>光纤 - 光猫 - 网线 - 路由器 - 网络设备</p>
-<p><img alt="光猫举例" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/e6c9d24ely1h2g95qm9ixj20dw0afmyb.jpg"/></p>
+<p><img alt="光猫举例" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/e6c9d24ely1h2g95qm9ixj20dw0afmyb.jpg"/></p>
 <p>连接到光纤线的设备就是光猫。路由器是自己买的设备，一般有一个 WAN 口，数个 LAN 口，一般应使用 WAN 口连接光猫。</p>
 <p>光猫原本只是一个光电信号转换器，不需要多少性能。现在光猫大多附带了路由和 WiFi 功能，拨号设置好后就可以上网了。运营商免费租用给用户的光猫显然要求成本尽可能的低，启用路由和无线功能之后，光猫负荷较大。虽然短时间工作或者数据吞吐量比较小的时候，光猫还能够应付，一旦长时间连续工作、带机数量比较多、或者进行大数据量下载传输操作的时候，就有可能出现网速不稳定、带宽不达标、网络延迟升高、丢包率高等现象。</p>
 <p>一般带路由功能的光猫只有两根天线，连接设备数有限制且容易掉线，WiFi 信号覆盖范围小，固件功能缺失，缺少常用的管理功能。解决方法就是外接路由器进行扩展，关闭光猫自带的路由功能，上网直接连接外接的路由器，减轻光猫负担。通常会让配置比较好的一方来路由，比如光猫配置比路由器好，就让光猫拨号，如果光猫配置很烂，就把光猫设置成桥接，然后用路由器拨号。比如移动宽带默认是移动光猫拨号，使用的路由模式。将光猫改为桥接模式，让光猫只做光转换，其他的事情交给路由器来做。如果家里的宽带是 100 兆及以下，选择端口百兆的路由器就够用了，如果宽带升级到 200 兆以上，要选择千兆的路由器。</p>
@@ -17,7 +17,7 @@
 <p>大部分的智能家居设备都只支持 2.4G 的无线网络。2.4G 无线的覆盖范围更大，随距离衰减小，对于智能家居设备来说，连接到网络就可以，对于网络速度要求不高，对延迟等要求也不高。</p>
 <blockquote><p>5G 通信和 5Ghz WiFi 不是一回事，5G 通信是 5th Generation mobile networks，第五代移动网络的简称，是指蜂窝移动通信技术（户外移动通信）。而 5G 无线网络指的是 WiFi 标准中的 5GHz，是指采用了 5GHz 频段传输数据的 WiFi 信号（室内无线终端上网）。同时支持 2.4 GHz 和 5GHz 的宽带路由器称为双频无线路由器。</p>
 </blockquote>
-<p><img alt="WiFi标准" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/e6c9d24ely1h2g9m6o073j20o104hdgw.jpg"/></p>
+<p><img alt="WiFi标准" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/e6c9d24ely1h2g9m6o073j20o104hdgw.jpg"/></p>
 <p>将路由器的无线信号，改为 2.4G 和 5G 的分离信号，不要使用融合信号。比如一个名字是 ABC，一个是 ABC_5G，其中 ABC 是 2.4G 无线。ABC_2.4G 给智能设备使用（可以设置一个独立的密码），让这些设备连接 2.4G 的无线，用来获得更大的覆盖距离。而 ABC_5G 给手机电脑使用，可以获得更好的无线速度，更低的延迟。</p>
 <p>APP 管理智能设备，只需要 APP 的手机可以联网，智能设备联网即可。当智能家居设备用 2.4G 频段，而手机电脑平板用 5G 频段时，它们依然在同一个路由器下，处在同一网段，完全可以直接设置，不需要切换到 2.4G 频段去设置。</p>
 <p>在移动光猫的设置里，开启 2.4G 的无线网络叫做 “SSID 使能”（应该是 enable 翻译过来的），SSID 名称就是你给自己无线网络所取的名字。开启 SSID 后会在无线列表中看到路由器设置的无线名称，关闭后则看不到。</p>
