--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -59,7 +59,7 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 <blockquote><p>An <code>invariant</code> function from <a href="https://github.com/alexreardon/tiny-invariant">tiny-invariant</a> takes a value, and if the value is falsy then the invariant function will throw. If the value is truthy, then the function will not throw.</p>
 </blockquote>
 <h3>Modular architecture</h3>
-<p>&lt;img alt="apple-style-dock" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/modular-architecture.png" width="700"&gt;</p>
+<p>&lt;img alt="apple-style-dock" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/modular-architecture.png" width="700"&gt;</p>
 <ul>
 <li>Components can’t use modules, but can use everything from the UI layer, while modules use components but can’t use pages. And pages only use modules.</li>
 <li>A module shouldn’t use another module, and a component should’t contain complex logic. If logic is still needed, it should be as simple and easily maintainable as possible, otherwise — it’s a module.</li>
@@ -213,7 +213,7 @@ npx shadcn@latest init http://localhost:8080/simple.json
 npx shadcn@latest add https://simple-ai.dev/r/chat-message.json
 </code></pre>
 &lt;figure&gt;
-  &lt;img alt="shadcn registry" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/shadcn-registry.png" width="600"&gt;
+  &lt;img alt="shadcn registry" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/shadcn-registry.png" width="600"&gt;
   &lt;figcaption&gt;registry.json and shadcn build&lt;/figcaption&gt;
 &lt;/figure&gt;<p>We also need to know what does <code>cva (class-variance-authority)</code> do. It basically is a function, that allows us to define variants for the element we want to style. A simple variant definition has a name and a list of possible values, each with a list of classes that should apply.</p>
 <pre><code class="lang-jsx">import { cva } from "class-variance-authority";
@@ -301,7 +301,7 @@ buttonVariants({ intent: "secondary", size: "small" });
 </code></pre>
 <h2>Background jobs</h2>
 <p>When a user submits work, a job record is created in the database with a unique ID. This ID is then sent to Inngest to trigger background processing, and the job ID is immediately returned to the user. Inngest processes the job asynchronously and updates the same database record with the results once processing is complete. Meanwhile, the user's frontend polls an API endpoint that checks the job status in the database. Once the status is marked as "completed," the frontend retrieves and displays the final results.</p>
-<p>&lt;img alt="inngest-runs" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/inngest-runs.png" width="700"&gt;</p>
+<p>&lt;img alt="inngest-runs" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/inngest-runs.png" width="700"&gt;</p>
 <pre><code class="lang-js">// actions.ts
 const jobId = crypto.randomUUID();
 await db.jobs.create({ id: jobId, status: "pending" });
