--- a/kexizeroing.github.io/Using Blob and ArrayBuffer in JavaScript.html
+++ b/kexizeroing.github.io/Using Blob and ArrayBuffer in JavaScript.html
@@ -111,7 +111,7 @@ blobText.arrayBuffer().then((buffer) =&gt; {
 <p>A buffer (implemented by the ArrayBuffer object) is an object representing a chunk of data; it has no format to speak of, and offers no mechanism for accessing its contents. In order to access the memory contained in a buffer, you need to use a view. A view provides a context — that is, a data type, starting offset, and number of elements — that turns the data into an actual typed array.</p>
 <blockquote><p>Typed Arrays were designed by the WebGL standards committee, for performance reasons. Typically Javascript arrays are generic and can hold objects, other arrays and so on - and the elements are not necessarily sequential in memory, like they would be in C. WebGL requires buffers to be sequential in memory, because that's how the underlying C API expects them. If Typed Arrays are not used, passing an ordinary array to a WebGL function requires a lot of work. For performance-sensitive WebGL applications this could cause a big drop in the framerate.</p>
 </blockquote>
-<p>&lt;img alt="typed_arrays" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/typed_arrays.png" width="550" /&gt;</p>
+<p>&lt;img alt="typed_arrays" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/typed_arrays.png" width="550" /&gt;</p>
 <table>
 <thead><tr>
 <th>Type</th>
