--- a/kneep.github.io/Paul Graham：如何创立谷歌那样的公司.html
+++ b/kneep.github.io/Paul Graham：如何创立谷歌那样的公司.html
@@ -29,7 +29,7 @@
 <p>谷歌也是。拉里和谢尔盖一开始也没有创业想法。他们只是想改善搜索的体验。在谷歌之前，大多数搜索引擎不会对结果按照重要性排序。如果你搜「橄榄球」，他们就会把每个包含「橄榄球」这个词的网页呈现给你。1997 年的时候，互联网规模还很小，所以这种策略还能凑合。可能只有二三十个网页包含「橄榄球」这个词。但从那以后，互联网呈指数级增长，所以这种呈现搜索结果的方式很快就失效。多数用户会想，「哇，我必须得从一大堆搜索结果中找出我想要的。」门卡住了。但跟马克一样，拉里和谢尔盖也是程序员。跟马克一样，他们研究了情况，心想，「好吧，有点愚蠢。部分关于橄榄球的网页要比其他的更重要。我们来搞清楚哪些更重要，并把它们放在前面。」</p>
 <p>事后去想，这对于创业公司来说，明显是个好创意。但在当时，这并不明显。根本不明显。如果在当时，苹果、谷歌或脸书就意识到这明显是个好创意，那么早就有人把这事给做了。这就是为什么伟大的创业公司通常脱胎于无心插柳的项目。你只是凭着本能找到感兴趣的事。如果你很年轻并精通技术，那么凭无意识的本能跟着兴趣走，比挖空心思去想一个成就好公司的创意，效果更好。</p>
 <p>如果你是一个年轻的创始人，做自己和朋友会用的东西是至关重要的。为看不见摸不着的小众人群打造产品，是年轻创始人会犯的最严重错误。如果你能做出自己和朋友真心想使用的东西——朋友使用它并不是出于友情，而是真心离不开这个东西——那么一个好的创业创意就已经萌芽。你可能还看不出能成一个公司。盈利模式还不是那么明显。但相信我，会有办法的。</p>
-<p>你创业所需要的创意，就是你身边朋友需要的产品。一旦你精通技术，这些创意并不能洞察。卡住的门无处不在。<sup class="footnote-ref" id="fnref-2"><a href="#fn-2">2</a></sup></p>
+<p>你创业所需要的创意，就是你身边朋友需要的产品。一旦你精通技术，这些创意并不难洞察。卡住的门无处不在。<sup class="footnote-ref" id="fnref-2"><a href="#fn-2">2</a></sup></p>
 <p>第三条也是最后一条：一个或多个创业伙伴。一个理想的创业公司一般有两到三个创始人，所以你需要再找一到两个。怎样才能找到？我接下来想说什么，你们能猜到吗？还是那句话：项目。你和他人一起做项目，就可能找到创业伙伴。你所需要的创业伙伴，他要精通自己手上的事，能和你紧密合作，判断这些特质的唯一方法就是跟他们一起做项目。</p>
 <p>到这里，我要讲点你们可能不爱听的话。成绩很重要，哪怕是那些死记硬背的课或废话连篇的文学。因为进好大学必须要有好成绩。如果你想创业，尽全力考上你能进的最好的大学，因为最好的创业伙伴就在那儿。最好的员工也在那儿。拉里和谢尔盖成立谷歌时，他们录用了在斯坦福认识的最聪明的一群人，这真的是一个优势。</p>
 <p>经验证据也支持此观点。如果你关注一下大量的优秀创业公司出自哪里，很可能出自那些要求最高的大学。</p>
