--- a/kneep.github.io/内存模型 1：什么是内存模型.html
+++ b/kneep.github.io/内存模型 1：什么是内存模型.html
@@ -22,9 +22,9 @@ L2: r2 = x;
 <p>（在本系列后续文章中，将沿用类似的表示方法，届时不再重复说明。）</p>
 <hr/>
 <p>现在，我们提出一个问题：</p>
-<p>{{&lt; alert &gt;}}
-程序运行后，<code>(r1, r2)</code> 的值是否可能为 <code>(0, 0)</code> ？
-{{&lt; /alert &gt;}}</p>
+<blockquote><p>[!WARNING] 问题
+程序运行后，<code>(r1, r2)</code> 的值是否可能为 <code>(0, 0)</code> ？</p>
+</blockquote>
 <p>这个问题看似简单，通常的推理逻辑如下：</p>
 <ol>
 <li><code>r1 == 0</code> 则说明 <code>y == 0</code></li>
