--- a/kneep.github.io/内存模型 2：SC.html
+++ b/kneep.github.io/内存模型 2：SC.html
@@ -49,31 +49,31 @@ L2: r2 = x;
 <li>意味着<code>S1 &lt;m L1</code>，它和<code>S1 &lt;p L1</code>是一致的</li>
 <li>同时意味着<code>S2 &lt;m L2</code>，它和<code>S2 &lt;p L2</code>也是一致的</li>
 </ul>
-<p>现在我们可以下结论：
-{{&lt; alert "check" &gt;}}
-场景一是符合 SC 的，运行结果是<code>(r1, r2) == (0, NEW)</code>
-{{&lt; /alert &gt;}}</p>
+<p>现在我们可以下结论：</p>
+<blockquote><p>[!TIP] 结论
+场景一是符合 SC 的，运行结果是<code>(r1, r2) == (0, NEW)</code></p>
+</blockquote>
 <h3>场景二</h3>
 <p>第二个场景的执行如下图：
 <img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/kneep.github.io/content/posts/img/sc2.svg" title="场景二"/>
 我们可以得出类似的结论：</p>
-<p>{{&lt; alert "check" &gt;}}
-场景二是符合 SC 的，运行结果是<code>(r1, r2) == (NEW, 0)</code>
-{{&lt; /alert &gt;}}</p>
+<blockquote><p>[!TIP] 结论
+场景二是符合 SC 的，运行结果是<code>(r1, r2) == (NEW, 0)</code></p>
+</blockquote>
 <h3>场景三</h3>
 <p>第三个场景的执行如下图：
 <img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/kneep.github.io/content/posts/img/sc3.svg" title="场景三"/>
 在这个例子中，在单个处理器上连续的指令，在实际执行的时候发生了交错（<code>S1</code>和<code>L1</code>之间隔着<code>S2</code>，<code>S2</code>和<code>L2</code>之间隔着<code>L1</code>），这在现实场景中很常见，但是如果我们对照 SC 的特性，依然可以得到以下结论：</p>
-<p>{{&lt; alert "check" &gt;}}
-场景三是符合 SC 的，运行结果是<code>(r1, r2) == (NEW, NEW)</code>
-{{&lt; /alert &gt;}}</p>
+<blockquote><p>[!TIP] 结论
+场景三是符合 SC 的，运行结果是<code>(r1, r2) == (NEW, NEW)</code></p>
+</blockquote>
 <h3>场景四</h3>
 <p>最后一个场景的执行如下图：
 <img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/kneep.github.io/content/posts/img/sc4.svg" title="场景4"/>
-这个场景就有点不一样了，因为<code>S2 &lt;p L2</code>，但是同时<code>L2 &lt;m S2</code>，所以我们可以得出结论：
-{{&lt; alert "xmark" &gt;}}
-场景四是<strong>不符合 SC</strong> 的，运行结果是<code>(r1, r2) == (0, 0)</code>
-{{&lt; /alert &gt;}}</p>
+这个场景就有点不一样了，因为<code>S2 &lt;p L2</code>，但是同时<code>L2 &lt;m S2</code>，所以我们可以得出结论：</p>
+<blockquote><p>[!CAUTION] 结论
+场景四是<strong>不符合 SC</strong> 的，运行结果是<code>(r1, r2) == (0, 0)</code></p>
+</blockquote>
 <h2>形式化定义</h2>
 <p>经过了这四个执行场景的分析，是时候给 SC 下一个形式化定义了。所谓形式化定义，就是用类似数学符号的语言，做逻辑严密的定义。</p>
 <ul>
@@ -86,8 +86,7 @@ L2: r2 = x;
 </li>
 <li>针对同一内存地址，读（<code>Load</code>）总是能得到 <code>&lt;m</code> 中最近一次写（<code>Store</code>）的值：</li>
 </ul>
-<p>{{&lt; katex &gt;}}
-$$
+<p>$$
 {L(a) = MAX_{&lt;m} { S(a)\ |\ S(a)\ \text{&lt;m} \ L(a)}}
 $$</p>
 <p>上面公式的意思是，对地址<code>a</code>的<code>Load</code>，读到的是在<code>&lt;m</code>中最新（Max）的一个对<code>a</code>进行<code>Store</code>的效果。</p>
