--- a/kneep.github.io/内存模型 3：TSO.html
+++ b/kneep.github.io/内存模型 3：TSO.html
@@ -35,9 +35,9 @@ S2: y = NEW;
 L3: r3 = y;
 L4: r4 = x;
 </code></pre>
-<p>{{&lt; alert "triangle-exclamation" &gt;}}
-程序运行后，有没有可能<code>(r1, r3) == (NEW, NEW)</code>且<code>(r2, r4) == (0, 0)</code>？
-{{&lt; /alert &gt;}}</p>
+<blockquote><p>[!WARNING] 问题
+程序运行后，有没有可能<code>(r1, r3) == (NEW, NEW)</code>且<code>(r2, r4) == (0, 0)</code>？</p>
+</blockquote>
 <p>答案是<strong>有可能</strong>。
 <img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/kneep.github.io/content/posts/img/tso2.svg"/></p>
 <p>从这个执行序列可以看出，<code>r1</code>能得到<code>NEW</code>值，哪怕<code>NEW</code>尚未实际进入<code>x</code>的内存位置，原因就是这两条指令操作的是同一地址，存在 bypassing 效应，红点即为 bypassing 发生处。同理<code>r3</code>也一样。</p>
@@ -54,22 +54,22 @@ L4: r4 = x;
 </ol>
 </li>
 </ul>
-<p>{{&lt; alert "triangle-exclamation" &gt;}}
-变更一：Write Buffer 效应，使 <code>Store -&gt; Load</code> 的顺序无法保证
-{{&lt; /alert &gt;}}</p>
+<blockquote><p>[!CAUTION] 结论
+变更一：Write Buffer 效应，使 <code>Store -&gt; Load</code> 的顺序无法保证</p>
+</blockquote>
 <hr/>
 <ul>
 <li>针对同一内存地址，读（<code>Load</code>）会得到 <code>&lt;m</code> 中最近一次写（<code>Store</code>）的值，或者同一处理器上一个尚位于 Write Buffer 中的值：<pre><code>L(a) = Max&lt;m { S(a) | S(a) &lt;m L(a) } 或 S(a) &lt;p L(a)
 </code></pre>
-{{&lt; katex &gt;}}
-$$
-{L(a) = MAX_{&lt;m} { S(a)\ |\ S(a) \text{  &lt;m  } L(a)} \text{ or } S(a) \text{  &lt;p  } L(a)}
-$$</li>
+</li>
 </ul>
-<p><code>S(a) &lt;p L(a)</code>是指针对同一地址的最新一个写指令。
-{{&lt; alert "triangle-exclamation" &gt;}}
-变更二：对地址<code>a</code>的<code>Load</code>，要么读到<code>&lt;m</code>中的最新值，要么读到<code>&lt;p</code>中的最新值，而且后者优先。
-{{&lt; /alert &gt;}}</p>
+<p>$$
+{L(a) = MAX_{&lt;m} { S(a)\ |\ S(a) \text{  &lt;m  } L(a)} \text{ or } S(a) \text{  &lt;p  } L(a)}
+$$</p>
+<p><code>S(a) &lt;p L(a)</code>是指针对同一地址的最新一个写指令。</p>
+<blockquote><p>[!CAUTION] 结论
+变更二：对地址<code>a</code>的<code>Load</code>，要么读到<code>&lt;m</code>中的最新值，要么读到<code>&lt;p</code>中的最新值，而且后者优先。</p>
+</blockquote>
 <hr/>
 <ul>
 <li>引入新的<code>FENCE</code>指令，其特性满足以下规则：<ol>
