--- a/kneep.github.io/内存模型 4：宽松模型.html
+++ b/kneep.github.io/内存模型 4：宽松模型.html
@@ -47,9 +47,8 @@ L3: r3 = data2;
 <li>如果<code>S1(a) &lt;p S2(a)</code>，则<code>S1(a) &lt;m S2(a)</code>（同一地址<code>Store-&gt;Store</code>）</li>
 </ol>
 <p>至于同一地址<code>Store-&gt;Load</code>的规则，和 TSO 是一样的：
-针对同一内存地址，读（<code>Load</code>）会得到 <code>&lt;m</code> 中最近一次写（<code>Store</code>）的值，或者同一处理器上一个尚位于 Write Buffer 中的值：
-{{&lt; katex &gt;}}
-$$
+针对同一内存地址，读（<code>Load</code>）会得到 <code>&lt;m</code> 中最近一次写（<code>Store</code>）的值，或者同一处理器上一个尚位于 Write Buffer 中的值：</p>
+<p>$$
 {L(a) = MAX_{&lt;m} { S(a)\ |\ S(a) \text{  &lt;m  } L(a)} \text{ or } S(a) \text{  &lt;p  } L(a)}
 $$</p>
 <p>除此以外，其他的顺序没有保证。</p>
