--- a/blog.forecho.com/如何选择自营交易平台.html
+++ b/blog.forecho.com/如何选择自营交易平台.html
@@ -15,19 +15,24 @@
 <p>这个平台按月收费，这点也比较坑。对于那些有工作，没有时间天天交易的人来说，不是很友好。</p>
 <p>不过他们的 TopstepX（指 <a href="https://www.projectx.com/">Projectx</a> 交易平台）很好用，很多功能很实用，完全是从交易员角度出发设计的。
 我在 <a href="https://blog.forecho.com/use-topstep.html">《使用 Topstep 交易期货》</a> 这篇文章中也有介绍过 TopstepX 的一些功能。</p>
+<blockquote><p>更新：Topstep 现在也有免激活账号了，但是月费还是要继续付。</p>
+</blockquote>
 <h3>Tradeify</h3>
 <p><a href="https://www.tradeify.co/">Tradeify</a> 听说是出金最爽快的平台了，上次因为活动太给力，直接打 5 折。冲动之下花了 364.5 刀买了一个 <code>Lightning Funded</code> 150k 账户，大出血。</p>
 <p>奔着出金去的，体验了一下 150k 账户，做起来确实顺手很多，有一次逆市不停的加仓也没爆仓，最后还小赚了（当然这种方式不可取，账户迟早爆仓）。</p>
 <p>Tradeify 问题在于他们不支持 Projectx 交易平台，然后我去选了 Tradovate ，对我来说 Tradovate 平台使用体验太糟糕了。有一次我着急下单，把 3 手 MES 改成 10 手，结果 input 框变成 103 手，我着急下单没再去确认，结果下单了 103 手 MES，很快爆仓了。气死我了😡 。</p>
 <p>从此拉黑 Tradovate 。</p>
 <p>Tradeify 现在买号有 Projectx 的选项了，但是仍然不可选，Discord 里面有回复说无法给到上线的确切的时间。</p>
-<blockquote><p>更新：Tradeify 现在支持 Projectx 平台了，但是额外要多收一点点美刀。现在多一个选择了。以后自己胜率提高，能力变强之后可以考虑该平台了。</p>
+<blockquote><p>更新：Tradeify 现在支持 Projectx 平台了，但是额外要多收一点点美刀。现在多一个选择了。以后自己胜率提高，能力变强之后可以考虑该平台了。
+再次更新：Projectx 现在成了 Topstep 独占了，不让其他平台使用了。</p>
 </blockquote>
 <h3>Lucidtrading</h3>
 <p>上面 2 个平台都爆仓之后我休息了一阵时间，没找到合适的平台，直到有一天群里有人发了 <a href="https://lucidtrading.com/">Lucidtrading</a> 的活动，然后我去看一下，很符合我的需求。于是就买了 50k 的号，当时搞活动是 70 多刀，日常活动是 80 多刀。</p>
 <p>Lucidtrading 的考试号是一次性收费的，不需要按月付费了，虽然贵了一点，但是他们是不用给激活费的。Topstep 考过之后需要给 149 刀的激活费才能获得出金号。</p>
 <p>但是反过来如果你一个月内把 Lucidtrading 的考试号给做爆仓了，说明你亏了，不如去买 Topstep 的考试号划算，意思你应该懂了吧。</p>
 <p>Lucidtrading 使用的 LucidX 就是 Projectx，这正是我想要的。</p>
+<blockquote><p>更新：Projectx 现在成了 Topstep 独占了，不让其他平台使用了。</p>
+</blockquote>
 <h2>总结</h2>
 <p>如果你是新手，我建议你选择 Topstep。因为新手很大概率会爆仓，Topstep 考试成本最低，非常适合用来练手。缺点是按月收费，考过之后还需要付激活费。</p>
 <p>如果你是有经验的交易员，或者你没有时间每天交易，我建议你选择 Lucidtrading。它是一次性收费，没有月费压力，考过之后也不需要激活费。缺点是单次考试的费用比 Topstep 的月费要高。</p>
