--- a/index.html
+++ b/index.html
@@ -6,12 +6,50 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 54 个博客、9243 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 54 个博客、9247 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=hijiangtao.github.io/2025%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2025-12-20 2025年终总结</a></li>
+
+<li><a href=jerkwin.github.io/%E5%8D%95%E4%BD%8D%E6%8D%A2%E7%AE%97%E4%B8%8ECODATA-2022%E6%95%B0%E6%8D%AE.html>2025-12-19 单位换算与CODATA-2022数据</a></li>
+
+<li><a href=jerkwin.github.io/GaussView-6%E7%9A%84%E5%8E%9F%E5%AD%90%E5%8D%8A%E5%BE%84.html>2025-12-18 GaussView-6的原子半径</a></li>
+
+<li><a href=informal.top/Hacker%20News%20to%20Kindle.html>2025-12-17 Hacker News to Kindle</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202550%20SU%20%E8%B7%91%E5%9B%A2%E5%8D%81%E5%91%A8%E5%B9%B4%E5%BA%86.html>2025-12-16 折返点 2550 SU 跑团十周年庆</a></li>
+
+<li><a href=blog.forecho.com/Supay%20%E8%99%9A%E6%8B%9F%E5%8D%A1%EF%BC%9A%E9%9A%90%E7%A7%81%E5%8F%8B%E5%A5%BD%E3%80%81%E8%B4%B9%E7%94%A8%E9%80%8F%E6%98%8E%E7%9A%84%E4%B8%80%E5%BC%A0%E3%80%8C%E8%83%BD%E9%95%BF%E6%9C%9F%E7%94%A8%E3%80%8D%E7%9A%84%E5%8D%A1.html>2025-12-16 Supay 虚拟卡：隐私友好、费用透明的一张「能长期用」的卡</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202549%20%E8%81%8A%E5%B4%A9%E4%BA%86.html>2025-12-12 父范学堂 2549 聊崩了</a></li>
+
+<li><a href=blog.forecho.com/%E6%96%B0%E6%89%8B%20Prop%20Firm%20%E4%BA%A4%E6%98%93%E6%8C%87%E5%8D%97%EF%BC%9A%E6%8A%9B%E5%BC%83%E7%AD%96%E7%95%A5%E7%84%A6%E8%99%91%EF%BC%8C%E8%81%9A%E7%84%A6%E9%A3%8E%E6%8E%A7%E6%A0%B8%E5%BF%83.html>2025-12-10 新手 Prop Firm 交易指南：抛弃策略焦虑，聚焦风控核心</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202549%2044%20%E8%8B%B1%E9%87%8C%E7%9A%84%E8%80%90%E5%8A%9B%E7%BB%B4%E6%8A%A4.html>2025-12-08 折返点 2549 44 英里的耐力维护</a></li>
+
+<li><a href=iphyer.github.io/USA%E5%8D%B0%E8%B1%A122%3A%20%E5%BE%B7%E5%B7%9E%E6%B5%B7%E9%92%93%E8%AE%B0.html>2025-12-07 USA印象22: 德州海钓记</a></li>
+
+<li><a href=young-lord.github.io/ZJUCTF%202025%20writeup.html>2025-12-07 ZJUCTF 2025 writeup</a></li>
+
+<li><a href=iphyer.github.io/%E5%B7%A5%E4%BD%9C%E6%80%BB%E7%BB%93%205.html>2025-12-05 工作总结 5</a></li>
+
+<li><a href=blog.forecho.com/%E7%B2%BE%E9%80%9A%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%EF%BC%9A%E7%94%A8%E3%80%8C%E6%95%B0K%E7%BA%BF%E3%80%8D%E7%B3%BB%E7%BB%9F%E5%8C%96%E4%BA%A4%E6%98%93%E5%9B%9E%E8%B0%83.html>2025-12-04 精通价格行为：用「数K线」系统化交易回调</a></li>
+
+<li><a href=conge.livingwithfcs.org/2025%20%E5%8D%81%E4%B8%80%E6%9C%88%E8%AF%BB%20%E5%A4%A7%E4%BC%97%E6%96%87%E5%8C%96%20%E5%B7%A5%E4%BA%BA%E5%8E%86%E5%8F%B2%20%E9%AD%94%E5%B9%BB%E5%B0%8F%E8%AF%B4%20%E5%8A%B1%E5%BF%97%E4%BF%AE%E8%A1%8C%2011%20%E6%9C%AC.html>2025-12-03 2025 十一月读 大众文化 工人历史 魔幻小说 励志修行 11 本</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202548%20%E5%AE%B6%E9%95%BF%E4%BC%9A%E4%B8%8E%E6%84%9F%E6%81%A9%E8%8A%82.html>2025-12-01 父范学堂 2548 家长会与感恩节</a></li>
+
+<li><a href=babyno.top/%E3%80%8C%E8%AF%91%E3%80%8DRust%20%E4%B8%AD%E7%9A%84%E5%91%BD%E4%BB%A4%E8%A1%8C%E5%BA%94%E7%94%A8.html>2025-12-01 「译」Rust 中的命令行应用</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202548%20%E7%BB%BF%E6%B9%96%E4%BC%A0%E5%A5%87.html>2025-12-01 折返点 2548 绿湖传奇</a></li>
+
+<li><a href=mabbs.github.io/%E5%9C%A8%E6%B5%8F%E8%A7%88%E5%99%A8%E4%B8%AD%E8%BF%90%E8%A1%8CLinux%E7%9A%84%E5%90%84%E7%A7%8D%E6%96%B9%E6%B3%95.html>2025-12-01 在浏览器中运行Linux的各种方法</a></li>
+
+<li><a href=blog.forecho.com/%E4%B8%8D%E6%AD%A2%E6%8D%9F%EF%BC%8C%E4%BD%A0%E8%BF%9F%E6%97%A9%E4%BC%9A%E4%BA%8F%E5%85%89%EF%BC%9A%E6%96%B0%E6%89%8B%E4%BA%A4%E6%98%93%E8%80%85%E7%9A%84%E7%AC%AC%E4%B8%80%E9%81%93%E9%A3%8E%E6%8E%A7%E6%8A%A4%E6%A0%8F.html>2025-11-30 不止损，你迟早会亏光：新手交易者的第一道风控护栏</a></li>
 
 <li><a href=informal.top/Another%20project.html>2025-11-28 Another project</a></li>
 
@@ -115,8 +153,6 @@
 
 <li><a href=conge.livingwithfcs.org/2025%20%E4%B9%9D%E6%9C%88%E8%AF%BB%20%E7%90%86%E6%83%B3%E5%9B%BD%20%E6%B3%95%E5%8F%B2%20%E5%AD%A6%E4%B9%A0%20%E6%B2%9F%E9%80%9A%E2%80%A6%E2%80%A6%207%20%E6%9C%AC%20.html>2025-10-09 2025 九月读 理想国 法史 学习 沟通…… 7 本 </a></li>
 
-<li><a href=blog.mauve.icu/Summer-Pockets.html>2025-10-08 Summer-Pockets</a></li>
-
 <li><a href=sund.site/AI%20Agent%20%2B%20%E4%BA%A7%E5%93%81%E7%BB%8F%E7%90%86%20%3D%20%E4%BA%A7%E5%93%81%E6%B5%8B%E8%AF%95%E5%B7%A5%E7%A8%8B%E5%B8%88.html>2025-10-08 AI Agent + 产品经理 = 产品测试工程师</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202540%20%E4%B8%AD%E7%A7%8B%E6%B8%B8%E5%9B%AD%E3%80%81%E6%B5%B7%E8%BE%B9%E9%87%8E%E9%A4%90%E4%B8%8E%E7%94%9F%E6%97%A5%E6%B4%BE%E5%AF%B9.html>2025-10-08 父范学堂 2540 中秋游园、海边野餐与生日派对</a></li>
@@ -126,6 +162,8 @@
 <li><a href=shiina18.github.io/RAG%20%E7%AE%80%E8%A6%81%E5%9B%9E%E9%A1%BE.html>2025-10-07 RAG 简要回顾</a></li>
 
 <li><a href=www.zhaohuabing.com/Envoy%20AI%20Gateway%20%E7%8E%B0%E5%B7%B2%E6%94%AF%E6%8C%81%20Model%20Context%20Protocol.html>2025-10-06 Envoy AI Gateway 现已支持 Model Context Protocol</a></li>
+
+<li><a href=blog.mauve.icu/Summer%20Pockets%20%E5%8A%A8%E7%94%BB%E5%AE%8C%E7%BB%93.html>2025-10-04 Summer Pockets 动画完结</a></li>
 
 <li><a href=shiina18.github.io/%E8%AF%BB%E4%BB%A3%E7%A0%81%3A%20Cherry%20Studio%20%E8%81%94%E7%BD%91%E6%90%9C.html>2025-09-30 读代码: Cherry Studio 联网搜</a></li>
 
@@ -1149,8 +1187,6 @@
 
 <li><a href=sund.site/%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F%E9%A1%B9%E7%9B%AE%E5%A4%8D%E7%9B%98.html>2024-10-24 监控系统项目复盘</a></li>
 
-<li><a href=sakurawald.github.io/favorite%20krunner%20plugins.html>2024-10-23 favorite krunner plugins</a></li>
-
 <li><a href=informal.top/How%20to%20learn%20knowledge%20in%20new%20fields%3F.html>2024-10-23 How to learn knowledge in new fields?</a></li>
 
 <li><a href=informal.top/Notes%20of%20flash-attention.html>2024-10-23 Notes of flash-attention</a></li>
@@ -1695,8 +1731,6 @@
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%85%B3%E4%BA%8E%E8%AF%AD%E4%B9%89%E7%9A%84%E8%BE%A8%E8%AF%86.html>2024-04-08 关于语义的辨识</a></li>
 
-<li><a href=sakurawald.github.io/good%20application%20set.html>2024-04-08 good application set</a></li>
-
 <li><a href=jerkwin.github.io/trr%E8%BD%A8%E8%BF%B9%E8%BD%AC%E6%8D%A2%E7%A8%8B%E5%BA%8Ftrr2all.html>2024-04-08 trr轨迹转换程序trr2all</a></li>
 
 <li><a href=sakurawald.github.io/launch%20tor%20browser%20without%20tor%20network.html>2024-04-07 launch tor browser without tor network</a></li>
@@ -2056,8 +2090,6 @@
 <li><a href=blog.mauve.icu/Educational%20Codeforces%20Round%20157%20%28Rated%20for%20Div.%202%29.html>2024-01-01 Educational Codeforces Round 157 (Rated for Div. 2)</a></li>
 
 <li><a href=blog.mauve.icu/C%2B%2B%E8%87%AA%E5%AE%9A%E4%B9%89%E7%9A%84%E5%AD%97%E9%9D%A2%E9%87%8F.html>2024-01-01 C++自定义的字面量</a></li>
-
-<li><a href=sakurawald.github.io/text%20auto%20highlighter%20configuration.html>2024-01-01 text auto highlighter configuration</a></li>
 
 <li><a href=mabbs.github.io/%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93.html>2024-01-01 年终总结</a></li>
 
@@ -2901,7 +2933,7 @@
 
 <li><a href=tifa-233.com/%E6%8B%9F%E9%98%B5%E7%AE%80%E4%BB%8B%EF%BC%88unfin%EF%BC%89.html>2023-05-01 拟阵简介（unfin）</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20minecraft%20server%20configuration.html>2023-05-01 play on minecraft server configuration</a></li>
+<li><a href=sakurawald.github.io/optimize%20minecraft%20server%20configuration.html>2023-05-01 optimize minecraft server configuration</a></li>
 
 <li><a href=tifa-233.com/%E9%A2%98%E8%A7%A3%20-%20%5BLuogu%20P5824%5D%20%E5%8D%81%E4%BA%8C%E9%87%8D%E8%AE%A1%E6%95%B0%E6%B3%95.html>2023-05-01 题解 - [Luogu P5824] 十二重计数法</a></li>
 
@@ -2913,7 +2945,7 @@
 
 <li><a href=young-lord.github.io/Kindle%20%E8%B6%8A%E7%8B%B1%E8%AE%B0%E5%BD%95.html>2023-04-30 Kindle 越狱记录</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20kde.html>2023-04-26 play on kde</a></li>
+<li><a href=sakurawald.github.io/tweak%20KDE%20preferences.html>2023-04-26 tweak KDE preferences</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20303%20%E7%83%B9%E9%A5%AA%E8%AF%BE.html>2023-04-25 新爸五年计划 | 303 烹饪课</a></li>
 
@@ -3093,13 +3125,11 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20295%20%E5%BC%80%E7%AA%8D.html>2023-02-24 新爸五年计划 | 295 开窍</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20vim.html>2023-02-24 play on vim</a></li>
-
 <li><a href=www.zhaohuabing.com/Aeraki%20Mesh%20Community%20Meeting%20-%20February%2023rd%2C%202023.html>2023-02-24 Aeraki Mesh Community Meeting - February 23rd, 2023</a></li>
 
 <li><a href=www.zhaohuabing.com/Aeraki%20Mesh%20%E7%A4%BE%E5%8C%BA%E4%BE%8B%E4%BC%9A%20-%202023-02-23.html>2023-02-24 Aeraki Mesh 社区例会 - 2023-02-23</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20android%20emulator.html>2023-02-22 play on android emulator</a></li>
+<li><a href=sakurawald.github.io/android%20emulator%20methods%20in%20linux.html>2023-02-22 android emulator methods in linux</a></li>
 
 <li><a href=mabbs.github.io/%E4%BD%BF%E7%94%A8CF%20Workers%20Cron%E8%A7%A6%E5%8F%91%E5%99%A8%E8%BF%9B%E8%A1%8C%E7%AD%BE%E5%88%B0.html>2023-02-22 使用CF Workers Cron触发器进行签到</a></li>
 
@@ -3128,8 +3158,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202306%20%7C%20%E7%96%97%E4%BC%A4%E7%AC%AC%E4%BA%8C%E5%91%A8.html>2023-02-11 折返点 2306 | 疗伤第二周</a></li>
 
 <li><a href=www.zhaohuabing.com/index.html>2023-02-08 index</a></li>
-
-<li><a href=sakurawald.github.io/play%20on%20stable-diffusion.html>2023-02-08 play on stable-diffusion</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20292%20%E5%84%BF%E5%AD%90%E6%AD%A3%E5%9C%A8%E8%B5%B7%E5%8F%98%E5%8C%96.html>2023-02-07 新爸五年计划 | 292 儿子正在起变化</a></li>
 
@@ -3170,8 +3198,6 @@
 <li><a href=gitee.com/MulanRevive/bounty/%E6%9C%A8%E5%85%B0%E8%AE%BE%E8%AE%A1%E4%B8%8E%E5%AE%9E%E7%8E%B0%E4%B8%AD%E7%9A%84%E5%90%84%E7%A7%8D%E5%B7%A7%E6%80%9D.html>2023-01-25 木兰设计与实现中的各种巧思</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202303%20%EF%BD%9C%E6%AF%8F%E5%A4%A9%E8%B7%91%E6%AD%A5%E4%BC%9A%E5%BD%B1%E5%93%8D%E2%80%9C%E5%A7%A8%E5%A6%88%E2%80%9D%E5%90%97%EF%BC%9F%20.html>2023-01-23 折返点 2303 ｜每天跑步会影响“姨妈”吗？ </a></li>
-
-<li><a href=sakurawald.github.io/database%20schema%20design.html>2023-01-22 database schema design</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20290%20%E8%BE%9E%E6%97%A7%E5%B2%81.html>2023-01-21 新爸五年计划 | 290 辞旧岁</a></li>
 
@@ -4083,8 +4109,6 @@
 
 <li><a href=hijiangtao.github.io/%E9%9D%A2%E5%90%91%E5%BE%AE%E5%89%8D%E7%AB%AF%EF%BC%8C%E8%B0%88%E8%B0%88%20JavaScript%20%E9%9A%94%E7%A6%BB%E6%B2%99%E7%AE%B1%E6%9C%BA%E5%88%B6%E7%9A%84%E5%8F%A4%E5%BE%80%E4%BB%8A%E6%9D%A5.html>2022-06-11 面向微前端，谈谈 JavaScript 隔离沙箱机制的古往今来</a></li>
 
-<li><a href=sakurawald.github.io/play%20on%20anbox.html>2022-06-09 play on anbox</a></li>
-
 <li><a href=conge.livingwithfcs.org/%E5%86%A5%E6%83%B3%E5%8F%AF%E4%BB%A5%E4%B8%8D%E9%97%AD%E7%9C%BC%E7%9D%9B%E4%B9%88%EF%BC%9F.html>2022-06-09 冥想可以不闭眼睛么？</a></li>
 
 <li><a href=www.cnfeat.com/%E8%AF%BB%E5%AE%8C%E5%88%A9%E5%99%A8%E5%AE%98%E7%BD%91%20484%20%E7%AF%87%E6%96%87%E7%AB%A0%EF%BC%8C%E6%88%91%E5%8F%AA%E6%9C%89%202%20%E6%9D%A1%E5%BF%83%E5%BE%97.html>2022-06-09 读完利器官网 484 篇文章，我只有 2 条心得</a></li>
@@ -4303,23 +4327,15 @@
 
 <li><a href=jasonkayzk.github.io/A%20method%20to%20add%20string%20literals%20in%20C%2B%2B.html>2022-04-30 A method to add string literals in C++</a></li>
 
-<li><a href=sakurawald.github.io/database%20relational%20query%20language.html>2022-04-30 database relational query language</a></li>
-
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202217%EF%BD%9C%E4%B8%8D%E6%B1%82%E7%8C%9B%EF%BC%8C%E6%B1%82%E6%81%92%EF%BC%8C%E6%98%AF%E6%88%91%E8%B7%91%E6%AD%A5%E7%9A%84%E5%BA%A7%E5%8F%B3%E9%93%AD.html>2022-04-30 折返点 2217｜不求猛，求恒，是我跑步的座右铭</a></li>
 
 <li><a href=young-lord.github.io/%E8%A7%A3%E5%8C%85%E3%80%8A%E9%9B%A8%E5%AE%BF%E5%85%AC%E8%BD%A6%E7%AB%99%E3%80%8B%E4%B8%8E%E3%80%8A%E9%BB%84%E6%98%8F%E7%9A%84%E5%8F%99%E4%BA%8B%E8%AF%97%E3%80%8B.html>2022-04-30 解包《雨宿公车站》与《黄昏的叙事诗》</a></li>
 
 <li><a href=jerkwin.github.io/%E4%BD%BF%E7%94%A8gnuplot%E7%BB%98%E5%88%B6%E5%B1%B1%E4%BD%93%E9%98%B4%E5%BD%B1%E5%9B%BE.html>2022-04-30 使用gnuplot绘制山体阴影图</a></li>
 
-<li><a href=sakurawald.github.io/database%20advanced%20sql.html>2022-04-29 database advanced sql</a></li>
-
 <li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%20Xdebug.html>2022-04-29 使用 Xdebug</a></li>
 
-<li><a href=sakurawald.github.io/database%20intermediate%20sql.html>2022-04-29 database intermediate sql</a></li>
-
 <li><a href=www.cnfeat.com/A%20%E7%BA%A7%E7%8E%A9%E5%AE%B6%E7%9A%84%E7%A7%98%E5%AF%86%E6%AD%A6%E5%99%A8.html>2022-04-29 A 级玩家的秘密武器</a></li>
-
-<li><a href=sakurawald.github.io/database%20elementary%20sql.html>2022-04-28 database elementary sql</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E4%B8%80%E4%B8%AA%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A1%E6%A8%A1%E7%B3%8A%E7%B2%BE%E7%A1%AE%E7%9A%84%E4%BE%8B%E5%AD%90.html>2022-04-27 一个架构设计模糊精确的例子</a></li>
 
@@ -4349,13 +4365,7 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%BD%E5%87%BA%E7%89%87%E5%88%BB%20%E8%82%AF%E5%AE%9A%E8%87%AA%E5%B7%B1.html>2022-04-19 抽出片刻 肯定自己</a></li>
 
-<li><a href=sakurawald.github.io/solve%20multiple-knapsack%20problem%20%26%20pebble%20merge%20problem.html>2022-04-19 solve multiple-knapsack problem & pebble merge problem</a></li>
-
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20250%20Dosewillips%20State%20Park.html>2022-04-19 新爸五年计划 | 250 Dosewillips State Park</a></li>
-
-<li><a href=sakurawald.github.io/play%20on%20stl.html>2022-04-18 play on stl</a></li>
-
-<li><a href=sakurawald.github.io/solve%20circle%20permutation%20problem.html>2022-04-17 solve circle permutation problem</a></li>
 
 <li><a href=mabbs.github.io/%E4%BD%93%E9%AA%8C%E6%88%90%E4%B8%BAPCDN%E7%9A%84%E8%8A%82%E7%82%B9.html>2022-04-17 体验成为PCDN的节点</a></li>
 
@@ -4366,8 +4376,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%9C%89%E5%85%B3%E7%AE%80%E5%8D%95%E5%86%A5%E6%83%B3%E7%BB%83%E4%B9%A0%E7%9A%84%E9%97%AE%E7%AD%94.html>2022-04-15 有关简单冥想练习的问答</a></li>
 
 <li><a href=jerkwin.github.io/%E5%8A%9B%E5%9C%BA%E6%8B%9F%E5%90%88%E5%B7%A5%E5%85%B7xff%E5%BC%80%E5%8F%91%E6%9D%82%E8%AE%B0.html>2022-04-15 力场拟合工具xff开发杂记</a></li>
-
-<li><a href=sakurawald.github.io/solve%20back-tracking%20%26%20IDDFS.html>2022-04-12 solve back-tracking & IDDFS</a></li>
 
 <li><a href=qingbob.com/%E5%B8%AE%E5%8A%A9%E5%9B%A2%E9%98%9F%E6%88%90%E9%95%BF%E6%98%AF%E5%94%AF%E4%B8%80%E7%9A%84%E5%87%BA%E8%B7%AF.html>2022-04-12 帮助团队成长是唯一的出路</a></li>
 
@@ -4388,8 +4396,6 @@
 <li><a href=shiina18.github.io/gRPC%20%E7%AE%80%E8%A6%81.html>2022-04-09 gRPC 简要</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%AE%80%E5%8D%95%E5%86%A5%E6%83%B3.html>2022-04-08 简单冥想</a></li>
-
-<li><a href=sakurawald.github.io/a%20simple%20judger%20in%20java.html>2022-04-05 a simple judger in java</a></li>
 
 <li><a href=blog.forecho.com/%E6%B7%B1%E5%9C%B3%E5%B0%81%E5%9F%8E%E8%AE%B0%E5%BD%95.html>2022-04-05 深圳封城记录</a></li>
 
@@ -4419,8 +4425,6 @@
 
 <li><a href=blog.forecho.com/Laravel%20Passport%20OAuth2%20%E5%AE%9E%E8%B7%B5.html>2022-03-28 Laravel Passport OAuth2 实践</a></li>
 
-<li><a href=sakurawald.github.io/solve%20set%20partition%20problem.html>2022-03-27 solve set partition problem</a></li>
-
 <li><a href=mabbs.github.io/%E7%94%A8%E6%A0%91%E8%8E%93%E6%B4%BE%E8%87%AA%E5%88%B6FM%E7%94%B5%E5%8F%B0.html>2022-03-27 用树莓派自制FM电台</a></li>
 
 <li><a href=shiina18.github.io/%E5%AD%9F%E5%8A%A0%E6%8B%89%E5%9B%BD%E5%8F%A3%E7%BD%A9%E8%AF%95%E9%AA%8C%3A%20%E6%95%88%E5%BA%94%E9%87%8F%E6%98%BE%E8%91%97%E5%9C%B0%E6%AF%94%E7%BB%9F%E8%AE%A1%E6%98%BE%E8%91%97%E6%80%A7%E6%9B%B4%E9%87%8D%E8%A6%81.html>2022-03-27 孟加拉国口罩试验: 效应量显著地比统计显著性更重要</a></li>
@@ -4430,8 +4434,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202212%EF%BD%9C%E8%B7%91%E6%AD%A5%E6%98%AF%E4%B8%80%E9%A1%B9%E5%AF%82%E5%AF%9E%E7%9A%84%E8%BF%90%E5%8A%A8%E5%90%97.html>2022-03-26 折返点 2212｜跑步是一项寂寞的运动吗</a></li>
 
 <li><a href=hijiangtao.github.io/%E9%98%B2%E7%96%AB%E6%97%A5%E8%AE%B0.html>2022-03-26 防疫日记</a></li>
-
-<li><a href=sakurawald.github.io/solve%20majority%20problem.html>2022-03-25 solve majority problem</a></li>
 
 <li><a href=shiina18.github.io/%E6%B7%B1%E5%BA%A6%E5%AD%A6%E4%B9%A0%E5%90%90%E6%A7%BD%E6%9D%82%E5%BD%95.html>2022-03-25 深度学习吐槽杂录</a></li>
 
@@ -18381,6 +18383,8 @@
 
 <li><a href=kexizeroing.github.io/PDF%20custom%20rendering.html>Nov 6 2022 PDF custom rendering</a></li>
 
+<li><a href=kexizeroing.github.io/How%20Xiaohongshu-style%20AI%20posts%20are%20made.html>Nov 30 202 How Xiaohongshu-style AI posts are made</a></li>
+
 <li><a href=kexizeroing.github.io/Making%20constants%20type-safe%20in%20TypeScript.html>Nov 3 2025 Making constants type-safe in TypeScript</a></li>
 
 <li><a href=kexizeroing.github.io/What%20is%20Nginx.html>Nov 3 2022 What is Nginx</a></li>
@@ -18447,6 +18451,8 @@
 
 <li><a href=kexizeroing.github.io/React%2019%E2%80%99s%20enhanced%20form%20handling.html>Feb 22 202 React 19’s enhanced form handling</a></li>
 
+<li><a href=kexizeroing.github.io/CSS%20list-style-type%20styling.html>Dec 8 2025 CSS list-style-type styling</a></li>
+
 <li><a href=kexizeroing.github.io/CSS%20effects%20collection.html>Dec 5 2022 CSS effects collection</a></li>
 
 <li><a href=kexizeroing.github.io/A%20quick%20way%20to%20serve%20HTTPS%20localhost.html>Dec 31 202 A quick way to serve HTTPS localhost</a></li>
@@ -18454,6 +18460,8 @@
 <li><a href=kexizeroing.github.io/Learn%20from%20Advent%20of%20Vue.html>Dec 27 202 Learn from Advent of Vue</a></li>
 
 <li><a href=kexizeroing.github.io/Understand%20npm%20concepts.html>Dec 14 202 Understand npm concepts</a></li>
+
+<li><a href=kexizeroing.github.io/Object-Oriented%20Patterns%20with%20TypeScript%20Generics.html>Dec 11 202 Object-Oriented Patterns with TypeScript Generics</a></li>
 
 <li><a href=kexizeroing.github.io/Fetch%20API%20requests%20and%20CORS.html>Aug 9 2020 Fetch API requests and CORS</a></li>
 
