--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -86,7 +86,7 @@ for (let i = 0; i &lt; all.length; i++) {
 <li><p>Position <code>fixed</code> doesn’t work with <code>transform</code> property for the ancestor element. It happens because <code>transform</code> creates a new stacking context and containing block, causing the fixed element to be positioned relative to that ancestor instead of the viewport.</p>
 </li>
 <li><p>Center one and right/left align other element: Grid layout may be the cleanest and most efficient method. There is no need for absolute positioning or flexbox with fake elements.</p>
-<p>&lt;img alt="header_center_grid" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8pu4q80utj30zq0u0gnm.jpg" width="600" /&gt;</p>
+<p>&lt;img alt="header_center_grid" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/008vxvgGly1h8pu4q80utj30zq0u0gnm.jpg" width="600" /&gt;</p>
 <p><em>(above picture comes from @shadeed9)</em></p>
 <pre><code class="lang-css">header {
   display: grid;
@@ -117,6 +117,22 @@ for (let i = 0; i &lt; all.length; i++) {
 }
 .footer {
   grid-area: footer;
+}
+</code></pre>
+</li>
+<li><p>We are creating a new grid when we use <code>subgrid</code>, but that grid will inherit the template from the parent grid. There’s only one grid structure, but it can be shared by multiple grids. For example, if you use <code>grid-template-columns: subgrid</code> and the nested grid spans three column tracks of the parent, the nested grid will have three column tracks of the same size as the parent grid.</p>
+<pre><code class="lang-scss">.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  .subgrid {
+    grid-column: 2 / 5;
+    grid-row: 2 / 5;
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-template-rows: subgrid;
+  }
 }
 </code></pre>
 </li>
@@ -175,7 +191,7 @@ html {
 /* grid-area: 2 / 1 / 2 / 4; */
 /* grid-row-start / grid-column-start / grid-row-end / grid-column-end
 </code></pre>
-<p>&lt;img alt="stack-elements-with-grid" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/stack-elements-grid.png" width="650" /&gt;</p>
+<p>&lt;img alt="stack-elements-with-grid" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/stack-elements-grid.png" width="650" /&gt;</p>
 </li>
 <li><p><code>text-underline-offset</code> sets the offset distance of an underline text decoration line from its original position. All browsers support this property. Note that it is not part of the <code>text-decoration</code> shorthand.</p>
 </li>
