--- a/kexizeroing.github.io/How common web mechanisms work under the hood.html
+++ b/kexizeroing.github.io/How common web mechanisms work under the hood.html
@@ -638,4 +638,4 @@ CAIF
 -&gt; 26 0 9 14
 It means: col 26 is mapping to source[0] line 9, col 14
 </code></pre>
-<p>&lt;img alt="how source maps work" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/source-map-under-the-hood.png" width="600" /&gt;</p>
+<p>&lt;img alt="how source maps work" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/source-map-under-the-hood.png" width="600" /&gt;</p>
