--- a/kexizeroing.github.io/How does browser load videos.html
+++ b/kexizeroing.github.io/How does browser load videos.html
@@ -43,7 +43,7 @@ video.addEventListener('error', () =&gt; {
 <p>MP4 and WebM formats are what we would call pseudo-streaming or "progressive download”. These formats do not support <strong>adaptive bitrate streaming</strong> (adjusts video quality based on network conditions). If you have ever taken an HTML video element and added a "src” attribute that points to an mp4, most players will progressively download the file. The good thing about progressive downloads is that you don’t have to wait for the player to download the entire file before you start watching. You can click play and start watching while the file is being downloaded in the background. Most players will also allow you to drag the playhead to specific places in the video timeline and the player will use byte-range requests to estimate which part of the file you are attempting to seek.</p>
 <h2>HLS and M3U8</h2>
 <p>HTTP Live Streaming sends audio and video as a series of small files, called media segment files. An index file, or playlist, provides an ordered list of the URLs of the media segment files. Index files for HTTP Live Streaming are saved as M3U8 playlists, an extension of the M3U format used for MP3 playlists.</p>
-<p>&lt;img alt="m3u8 compatibility" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/51ec8e88-554e-4272-b3de-df878d9dede4.png" width="750"&gt;</p>
+<p>&lt;img alt="m3u8 compatibility" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/51ec8e88-554e-4272-b3de-df878d9dede4.png" width="750"&gt;</p>
 <ol>
 <li>HLS (Protocol) defines how video is segmented and delivered over HTTP. (Use m3u8 manifest files to tell players where to find segments)</li>
 <li>Safari natively supports native HLS, but Chrome and Firefox do not. By native in this context, it means you can set <code>&lt;video src="something.m3u8"&gt;</code> and the browser handles everything internally, no extra JavaScript or MSE is needed.</li>
@@ -74,7 +74,7 @@ video.addEventListener('error', () =&gt; {
 &lt;/script&gt;
 </code></pre>
 <h3>Blob url video streaming</h3>
-<p>&lt;img alt="blob-url-video" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/12643918-81ad-47c1-8ea2-45205d1f23a9.png" width="500"&gt;</p>
+<p>&lt;img alt="blob-url-video" src="https://raw.githubusercontent.com/kexiZeroing/blog-images/main/12643918-81ad-47c1-8ea2-45205d1f23a9.png" width="500"&gt;</p>
 <p>All those websites actually still use the video tag. But instead of simply setting a video file in the <code>src</code> attribute, they make use of much more powerful web APIs, the Media Source Extensions (more often shortened to just “MSE”). Complex web-compatible video players are all based on MediaSource and <a href="https://developer.mozilla.org/en-US/docs/Web/API/SourceBuffer">SourceBuffer</a>.</p>
 <p>Those “extensions” add the MediaSource object to JavaScript. As its name suggests, this will be the source of the video, or put more simply, this is the object representing our video’s data. The <code>URL.createObjectURL</code> API allows creating an URL, which will actually refer not to a resource available online, but directly to a JavaScript object created on the client.</p>
 <blockquote><p>MSE lets JavaScript feed video/audio data to the browser’s <code>&lt;video&gt;</code> element. It gives developers low-level control to dynamically construct streams in JavaScript, append media chunks using, and switch quality levels manually if needed.</p>
